Start release 2.10.6.3-SNAPSHOT