@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -24,9 +24,9 @@ import static org.testng.Assert.assertNotEquals;
 import static org.testng.Assert.assertThrows;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.fail;
+import com.google.common.collect.ImmutableSet;
 import java.lang.reflect.Field;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
@@ -49,7 +49,6 @@ import org.apache.bookkeeper.mledger.ManagedCursor;
 import org.apache.bookkeeper.mledger.ManagedLedgerConfig;
 import org.apache.bookkeeper.mledger.ManagedLedgerException;
 import org.apache.bookkeeper.mledger.Position;
-import org.apache.bookkeeper.mledger.PositionFactory;
 import org.apache.bookkeeper.mledger.proto.MLDataFormats;
 import org.apache.bookkeeper.mledger.proto.MLDataFormats.ManagedLedgerInfo.LedgerInfo;
 import org.apache.bookkeeper.test.MockedBookKeeperTestCase;
@@ -59,8 +58,6 @@ import org.apache.pulsar.metadata.api.MetadataStoreException;
 import org.apache.pulsar.metadata.impl.FaultInjectionMetadataStore;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 public class OffloadPrefixTest extends MockedBookKeeperTestCase {
@@ -95,7 +92,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             ledger.offloadPrefix(p);
             fail("Should have thrown an exception");
         } catch (ManagedLedgerException e) {
-            assertTrue(e.getMessage().contains("does not support offload"));
+            assertEquals(e.getMessage(), "NullLedgerOffloader");
         }
         assertEquals(ledger.getLedgersInfoAsList().size(), 5);
         assertEquals(ledger.getLedgersInfoAsList().stream()
@@ -202,13 +199,13 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         try {
-            ledger.offloadPrefix(PositionFactory.EARLIEST);
+            ledger.offloadPrefix(PositionImpl.EARLIEST);
             fail("Should have thrown an exception");
         } catch (ManagedLedgerException.InvalidCursorPositionException e) {
             // expected
         }
         try {
-            ledger.offloadPrefix(PositionFactory.LATEST);
+            ledger.offloadPrefix(PositionImpl.LATEST);
             fail("Should have thrown an exception");
         } catch (ManagedLedgerException.InvalidCursorPositionException e) {
             // expected
@@ -242,7 +239,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         ledger.addEntry("entry-blah".getBytes());
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
-        Position firstUnoffloaded = ledger.offloadPrefix(p);
+        PositionImpl firstUnoffloaded = (PositionImpl)ledger.offloadPrefix(p);
 
         // only the first ledger should have been offloaded
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
@@ -255,7 +252,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         assertEquals(firstUnoffloaded.getEntryId(), 0);
 
         // offload again, with the position in the third ledger
-        Position firstUnoffloaded2 = ledger.offloadPrefix(ledger.getLastConfirmedEntry());
+        PositionImpl firstUnoffloaded2 = (PositionImpl)ledger.offloadPrefix(ledger.getLastConfirmedEntry());
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
         assertEquals(offloader.offloadedLedgers().size(), 2);
         assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
@@ -292,9 +289,9 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         assertEquals(ledger.getLedgersInfoAsList().get(1).getSize(), 0);
 
         // position past the end of first ledger
-        Position p = PositionFactory.create(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
+        Position p = new PositionImpl(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
 
-        Position firstUnoffloaded = ledger.offloadPrefix(p);
+        PositionImpl firstUnoffloaded = (PositionImpl)ledger.offloadPrefix(p);
 
         // only the first ledger should have been offloaded
         assertEquals(ledger.getLedgersInfoAsList().size(), 2);
@@ -336,8 +333,8 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         }
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
-        Position startOfSecondLedger = PositionFactory.create(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
-        Position startOfThirdLedger = PositionFactory.create(ledger.getLedgersInfoAsList().get(2).getLedgerId(), 0);
+        PositionImpl startOfSecondLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
+        PositionImpl startOfThirdLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(2).getLedgerId(), 0);
 
         // trigger an offload which should offload the first two ledgers
         OffloadCallbackPromise cbPromise = new OffloadCallbackPromise();
@@ -399,8 +396,8 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         }
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
-        Position startOfSecondLedger = PositionFactory.create(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
-        Position startOfThirdLedger = PositionFactory.create(ledger.getLedgersInfoAsList().get(2).getLedgerId(), 0);
+        PositionImpl startOfSecondLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
+        PositionImpl startOfThirdLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(2).getLedgerId(), 0);
 
         // trigger an offload which should offload the first two ledgers
         OffloadCallbackPromise cbPromise = new OffloadCallbackPromise();
@@ -515,7 +512,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         assertEquals(ledger.getLedgersInfoAsList().size(), 4);
 
         // mark ledgers to fail
-        promise.complete(Set.of(ledger.getLedgersInfoAsList().get(failIndex).getLedgerId()));
+        promise.complete(ImmutableSet.of(ledger.getLedgersInfoAsList().get(failIndex).getLedgerId()));
 
         try {
             ledger.offloadPrefix(ledger.getLastConfirmedEntry());
@@ -830,7 +827,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         ledgers.put(secondLedgerId,
                     ledgers.get(secondLedgerId).toBuilder().setEntries(0).setSize(0).build());
 
-        Position firstUnoffloaded = ledger.offloadPrefix(ledger.getLastConfirmedEntry());
+        PositionImpl firstUnoffloaded = (PositionImpl)ledger.offloadPrefix(ledger.getLastConfirmedEntry());
         assertEquals(firstUnoffloaded.getLedgerId(), fourthLedgerId);
         assertEquals(firstUnoffloaded.getEntryId(), 0);
 
@@ -839,7 +836,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
-        assertEquals(offloader.offloadedLedgers(), Set.of(firstLedgerId, thirdLedgerId));
+        assertEquals(offloader.offloadedLedgers(), ImmutableSet.of(firstLedgerId, thirdLedgerId));
     }
 
     private static byte[] buildEntry(int size, String pattern) {
@@ -852,31 +849,17 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         return entry;
     }
 
-    @DataProvider(name = "testAutoTriggerOffload")
-    public Object[][] testAutoTriggerOffloadProvider() {
-        return new Object[][]{
-                {null, 0L},
-                {100L, null},
-                {-1L, null},
-                {null, null},
-                {-1L, -1L},
-                {1L, 1L},
-                {100L, Long.MAX_VALUE}
-        };
-    }
-
-    @Test(dataProvider = "testAutoTriggerOffload")
-    public void testAutoTriggerOffload(Long sizeThreshold, Long timeThreshold) throws Exception {
+    @Test
+    public void testAutoTriggerOffload() throws Exception {
         MockLedgerOffloader offloader = new MockLedgerOffloader();
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
         config.setRetentionTime(10, TimeUnit.MINUTES);
         config.setRetentionSizeInMB(10);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(100L);
         config.setLedgerOffloader(offloader);
 
-        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger" + UUID.randomUUID(), config);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
         // Ledger will roll twice, offload will run on first ledger after second closed
         for (int i = 0; i < 25; i++) {
@@ -885,50 +868,14 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
-        if (sizeThreshold == null && timeThreshold != null && timeThreshold == 0L) {
-            // All the inactive ledgers will be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0), allLedgerIds.get(1)));
-        } else if (sizeThreshold != null && sizeThreshold == 100L && timeThreshold == null) {
-            // The last 2 ledgers won't be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0)));
-        } else if (sizeThreshold != null && sizeThreshold == -1L && timeThreshold == null) {
-            // Offloading is disabled, no ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
-            assertEquals(offloader.offloadedLedgers().size(), 0);
-        } else if (sizeThreshold == null && timeThreshold == null) {
-            // Offloading is disabled, no ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
-            assertEquals(offloader.offloadedLedgers().size(), 0);
-        } else if (sizeThreshold != null && sizeThreshold == 1L && timeThreshold != null && timeThreshold == 1L) {
-            // All the inactive ledgers will be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0), allLedgerIds.get(1)));
-        } else if (sizeThreshold != null && sizeThreshold == 100L
-                && timeThreshold != null && timeThreshold == Long.MAX_VALUE) {
-            // The last 2 ledgers won't be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0)));
-        }
+        // offload should eventually be triggered
+        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
+        assertEquals(offloader.offloadedLedgers(),
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
     }
 
-    @DataProvider(name = "manualTriggerWhileAutoInProgress")
-    public Object[][] manualTriggerWhileAutoInProgressProvider() {
-        return new Object[][]{
-                {null, 0L},
-                {100L, null},
-                {1L, 1L},
-                {0L, 0L}
-        };
-    }
-
-    @Test(dataProvider = "manualTriggerWhileAutoInProgress")
-    public void manualTriggerWhileAutoInProgress(Long sizeThreshold, Long timeThreshold) throws Exception {
+    @Test
+    public void manualTriggerWhileAutoInProgress() throws Exception {
         CompletableFuture<Void> slowOffload = new CompletableFuture<>();
         CountDownLatch offloadRunning = new CountDownLatch(1);
         MockLedgerOffloader offloader = new MockLedgerOffloader() {
@@ -945,8 +892,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setRetentionTime(10, TimeUnit.MINUTES);
         config.setRetentionSizeInMB(10);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(100L);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -971,57 +917,26 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         slowOffload.complete(null);
 
-        Assert.assertEquals(5, ledger.getLedgersInfoAsList().size());
-
-        if (null == sizeThreshold && timeThreshold != null && timeThreshold.equals(0L)) {
-            // All the inactive ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(3).getLedgerId()));
-        } else if (sizeThreshold != null && sizeThreshold.equals(100L) && timeThreshold == null) {
-            // the last 2 ledgers won't be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
-        } else if (sizeThreshold != null && sizeThreshold.equals(1L)
-                && timeThreshold != null && timeThreshold.equals(1L)) {
-            // the last 1 ledger wont be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(3).getLedgerId()));
-        } else if (sizeThreshold != null && sizeThreshold.equals(0L)
-                && timeThreshold != null && timeThreshold.equals(0L)) {
-            // All the inactive ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(3).getLedgerId()));
-        }
-
+        // eventually all over threshold will be offloaded
+        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+        assertEquals(offloader.offloadedLedgers(),
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
 
         // then a manual offload can run and offload the one ledger under the threshold
         ledger.offloadPrefix(p);
 
         assertEquals(offloader.offloadedLedgers().size(), 4);
         assertEquals(offloader.offloadedLedgers(),
-                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(2).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(3).getLedgerId()));
     }
 
-    @Test(dataProvider = "manualTriggerWhileAutoInProgress")
-    public void autoTriggerWhileManualInProgress(Long sizeThreshold, Long timeThreshold) throws Exception {
+    @Test
+    public void autoTriggerWhileManualInProgress() throws Exception {
         CompletableFuture<Void> slowOffload = new CompletableFuture<>();
         CountDownLatch offloadRunning = new CountDownLatch(1);
         MockLedgerOffloader offloader = new MockLedgerOffloader() {
@@ -1038,8 +953,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setRetentionTime(10, TimeUnit.MINUTES);
         config.setRetentionSizeInMB(10);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(100L);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -1059,47 +973,21 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             ledger.addEntry(buildEntry(10, "entry-" + i));
         }
 
-        Assert.assertEquals(4, ledger.getLedgersInfoAsList().size());
-
         // allow the manual offload to complete
         slowOffload.complete(null);
 
-        if (null == sizeThreshold && timeThreshold != null && timeThreshold.equals(0L)) {
-            // All the inactive ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
-        } else if (sizeThreshold != null && sizeThreshold.equals(100L) && timeThreshold == null) {
-            // the last 2 ledgers won't be offloaded.
-            assertEquals(cbPromise.join(),
-                    PositionFactory.create(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0));
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId()));
-        } else if (sizeThreshold != null && sizeThreshold.equals(1L)
-                && timeThreshold != null && timeThreshold.equals(1L)) {
-            // the last 1 ledger wont be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
-        } else if (sizeThreshold != null && sizeThreshold.equals(0L)
-                && timeThreshold != null && timeThreshold.equals(0L)) {
-            // All the inactive ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
-        }
+        assertEquals(cbPromise.join(),
+                            PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0));
+
+        // auto trigger should eventually offload everything else over threshold
+        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
+        assertEquals(offloader.offloadedLedgers(),
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                                            ledger.getLedgersInfoAsList().get(1).getLedgerId()));
     }
 
-    @Test(dataProvider = "testAutoTriggerOffload")
-    public void multipleAutoTriggers(Long sizeThreshold, Long timeThreshold) throws Exception {
+    @Test
+    public void multipleAutoTriggers() throws Exception {
         CompletableFuture<Void> slowOffload = new CompletableFuture<>();
         CountDownLatch offloadRunning = new CountDownLatch(1);
         MockLedgerOffloader offloader = new MockLedgerOffloader() {
@@ -1116,8 +1004,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setRetentionTime(10, TimeUnit.MINUTES);
         config.setRetentionSizeInMB(10);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(100L);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -1126,7 +1013,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         for (int i = 0; i < 25; i++) {
             ledger.addEntry(buildEntry(10, "entry-" + i));
         }
-        offloadRunning.await(5, TimeUnit.SECONDS);
+        offloadRunning.await();
 
         // trigger a bunch more rolls. Eventually there will be 5 ledgers.
         // first 3 should be offloaded, 4th is 100bytes, 5th is 0 bytes.
@@ -1138,65 +1025,21 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         // allow the first offload to continue
         slowOffload.complete(null);
 
-        Assert.assertEquals(5, ledger.getLedgersInfoAsList().size());
-
-        if (sizeThreshold == null && timeThreshold != null && timeThreshold == 0L) {
-            // All the inactive ledgers will be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(allLedgerIds.get(0),
-                            allLedgerIds.get(1),
-                            allLedgerIds.get(2),
-                            allLedgerIds.get(3))
-            );
-        } else if (sizeThreshold != null && sizeThreshold == 100L && timeThreshold == null) {
-            // The last 2 ledgers won't be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(allLedgerIds.get(0),
-                            allLedgerIds.get(1),
-                            allLedgerIds.get(2))
-            );
-        } else if (sizeThreshold != null && sizeThreshold == -1L && timeThreshold == null) {
-            // Offloading is disabled, no ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
-            assertEquals(offloader.offloadedLedgers().size(), 0);
-        } else if (sizeThreshold == null && timeThreshold == null) {
-            // Offloading is disabled, no ledgers will be offloaded.
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
-            assertEquals(offloader.offloadedLedgers().size(), 0);
-        } else if (sizeThreshold != null && sizeThreshold == 1L && timeThreshold != null && timeThreshold == 1L) {
-            // All the inactive ledgers will be offloaded
-            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
-            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
-            assertEquals(offloader.offloadedLedgers(),
-                    Set.of(allLedgerIds.get(0),
-                            allLedgerIds.get(1),
-                            allLedgerIds.get(2),
-                            allLedgerIds.get(3))
-            );
-        }
+        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+        assertEquals(offloader.offloadedLedgers(),
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
     }
 
-    @DataProvider(name = "offloadAsSoonAsClosed")
-    public Object[][] offloadAsSoonAsClosedProvider() {
-        return new Object[][]{
-                {null, 0L},
-                {0L, null}
-        };
-    }
-
-    @Test(dataProvider = "offloadAsSoonAsClosed")
-    public void offloadAsSoonAsClosed(Long sizeThreshold, Long timeThreshold) throws Exception {
+    @Test
+    public void offloadAsSoonAsClosed() throws Exception {
         MockLedgerOffloader offloader = new MockLedgerOffloader();
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
         config.setRetentionTime(10, TimeUnit.MINUTES);
         config.setRetentionSizeInMB(10);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
-        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(0L);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -1207,7 +1050,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
         assertEquals(offloader.offloadedLedgers(),
-                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
 
         for (int i = 0; i < 10; i++) {
             ledger.addEntry(buildEntry(10, "entry-" + i));
@@ -1215,7 +1058,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
         assertEquals(offloader.offloadedLedgers(),
-                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId()));
     }
 
@@ -1263,7 +1106,6 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
                 OffloadPoliciesImpl.DEFAULT_MAX_BLOCK_SIZE_IN_BYTES,
                 OffloadPoliciesImpl.DEFAULT_READ_BUFFER_SIZE_IN_BYTES,
                 OffloadPoliciesImpl.DEFAULT_OFFLOAD_THRESHOLD_IN_BYTES,
-                OffloadPoliciesImpl.DEFAULT_OFFLOAD_THRESHOLD_IN_SECONDS,
                 OffloadPoliciesImpl.DEFAULT_OFFLOAD_DELETION_LAG_IN_MILLIS,
                 OffloadPoliciesImpl.DEFAULT_OFFLOADED_READ_PRIORITY);
 
