@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,26 +18,23 @@
  */
 package org.apache.pulsar.broker.service.persistent;
 
-import static org.apache.pulsar.broker.service.AbstractBaseDispatcher.checkAndApplyReachedEndOfTopicOrTopicMigration;
-import static org.apache.pulsar.common.naming.SystemTopicNames.isEventSystemTopic;
+import static org.apache.pulsar.common.events.EventsTopicNames.checkTopicIsEventsNames;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.MoreObjects;
+import com.google.common.base.Predicate;
 import io.netty.buffer.ByteBuf;
-import java.io.IOException;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
-import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicIntegerFieldUpdater;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import lombok.Getter;
 import org.apache.bookkeeper.mledger.AsyncCallbacks;
 import org.apache.bookkeeper.mledger.AsyncCallbacks.ClearBacklogCallback;
 import org.apache.bookkeeper.mledger.AsyncCallbacks.DeleteCallback;
@@ -52,12 +49,13 @@ import org.apache.bookkeeper.mledger.ManagedLedgerException.ConcurrentFindCursor
 import org.apache.bookkeeper.mledger.ManagedLedgerException.InvalidCursorPositionException;
 import org.apache.bookkeeper.mledger.Position;
 import org.apache.bookkeeper.mledger.ScanOutcome;
+import org.apache.bookkeeper.mledger.impl.ManagedCursorImpl;
+import org.apache.bookkeeper.mledger.impl.ManagedLedgerImpl;
+import org.apache.bookkeeper.mledger.impl.PositionImpl;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.tuple.MutablePair;
 import org.apache.pulsar.broker.ServiceConfiguration;
 import org.apache.pulsar.broker.intercept.BrokerInterceptor;
-import org.apache.pulsar.broker.loadbalance.extensions.ExtensibleLoadManagerImpl;
-import org.apache.pulsar.broker.loadbalance.extensions.data.BrokerLookupData;
 import org.apache.pulsar.broker.service.AbstractSubscription;
 import org.apache.pulsar.broker.service.AnalyzeBacklogResult;
 import org.apache.pulsar.broker.service.BrokerServiceException;
@@ -69,8 +67,6 @@ import org.apache.pulsar.broker.service.BrokerServiceException.SubscriptionInval
 import org.apache.pulsar.broker.service.Consumer;
 import org.apache.pulsar.broker.service.Dispatcher;
 import org.apache.pulsar.broker.service.EntryFilterSupport;
-import org.apache.pulsar.broker.service.GetStatsOptions;
-import org.apache.pulsar.broker.service.StickyKeyDispatcher;
 import org.apache.pulsar.broker.service.Subscription;
 import org.apache.pulsar.broker.service.Topic;
 import org.apache.pulsar.broker.service.plugin.EntryFilter;
@@ -91,12 +87,11 @@ import org.apache.pulsar.common.policies.data.TransactionPendingAckStats;
 import org.apache.pulsar.common.policies.data.stats.ConsumerStatsImpl;
 import org.apache.pulsar.common.policies.data.stats.SubscriptionStatsImpl;
 import org.apache.pulsar.common.protocol.Commands;
-import org.apache.pulsar.common.stats.PositionInPendingAckStats;
 import org.apache.pulsar.common.util.FutureUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class PersistentSubscription extends AbstractSubscription {
+public class PersistentSubscription extends AbstractSubscription implements Subscription {
     protected final PersistentTopic topic;
     protected final ManagedCursor cursor;
     protected volatile Dispatcher dispatcher;
@@ -123,16 +118,17 @@ public class PersistentSubscription extends AbstractSubscription {
     // Map of properties that is used to mark this subscription as "replicated".
     // Since this is the only field at this point, we can just keep a static
     // instance of the map.
-    private static final Map<String, Long> REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES =
-            Map.of(REPLICATED_SUBSCRIPTION_PROPERTY, 1L);
-    private static final Map<String, Long> NON_REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES = Map.of();
+    private static final Map<String, Long> REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES = new TreeMap<>();
+    private static final Map<String, Long> NON_REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES = Collections.emptyMap();
 
     private volatile ReplicatedSubscriptionSnapshotCache replicatedSubscriptionSnapshotCache;
-    @Getter
     private final PendingAckHandle pendingAckHandle;
     private volatile Map<String, String> subscriptionProperties;
     private volatile CompletableFuture<Void> fenceFuture;
-    private volatile CompletableFuture<Void> inProgressResetCursorFuture;
+
+    static {
+        REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES.put(REPLICATED_SUBSCRIPTION_PROPERTY, 1L);
+    }
 
     static Map<String, Long> getBaseCursorProperties(boolean isReplicated) {
         return isReplicated ? REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES : NON_REPLICATED_SUBSCRIPTION_CURSOR_PROPERTIES;
@@ -143,7 +139,7 @@ public class PersistentSubscription extends AbstractSubscription {
     }
 
     public PersistentSubscription(PersistentTopic topic, String subscriptionName, ManagedCursor cursor,
-                                  boolean replicated) {
+                                                         boolean replicated) {
         this(topic, subscriptionName, cursor, replicated, Collections.emptyMap());
     }
 
@@ -159,8 +155,7 @@ public class PersistentSubscription extends AbstractSubscription {
         this.subscriptionProperties = MapUtils.isEmpty(subscriptionProperties)
                 ? Collections.emptyMap() : Collections.unmodifiableMap(subscriptionProperties);
         if (topic.getBrokerService().getPulsar().getConfig().isTransactionCoordinatorEnabled()
-                && !isEventSystemTopic(TopicName.get(topicName))
-                && !ExtensibleLoadManagerImpl.isInternalTopic(topicName)) {
+                && !checkTopicIsEventsNames(TopicName.get(topicName))) {
             this.pendingAckHandle = new PendingAckHandleImpl(this);
         } else {
             this.pendingAckHandle = new PendingAckHandleDisabled();
@@ -170,7 +165,7 @@ public class PersistentSubscription extends AbstractSubscription {
 
     public void updateLastMarkDeleteAdvancedTimestamp() {
         this.lastMarkDeleteAdvancedTimestamp =
-                Math.max(this.lastMarkDeleteAdvancedTimestamp, System.currentTimeMillis());
+            Math.max(this.lastMarkDeleteAdvancedTimestamp, System.currentTimeMillis());
     }
 
     @Override
@@ -205,12 +200,7 @@ public class PersistentSubscription extends AbstractSubscription {
 
         if (this.cursor != null) {
             if (replicated) {
-                if (!config.isEnableReplicatedSubscriptions()) {
-                    log.warn("[{}][{}] Failed set replicated subscription status to {}, please enable the "
-                            + "configuration enableReplicatedSubscriptions", topicName, subName, replicated);
-                } else {
-                    return this.cursor.putProperty(REPLICATED_SUBSCRIPTION_PROPERTY, 1L);
-                }
+                return this.cursor.putProperty(REPLICATED_SUBSCRIPTION_PROPERTY, 1L);
             } else {
                 return this.cursor.removeProperty(REPLICATED_SUBSCRIPTION_PROPERTY);
             }
@@ -221,16 +211,6 @@ public class PersistentSubscription extends AbstractSubscription {
 
     @Override
     public CompletableFuture<Void> addConsumer(Consumer consumer) {
-        CompletableFuture<Void> inProgressResetCursorFuture = this.inProgressResetCursorFuture;
-        if (inProgressResetCursorFuture != null) {
-            return inProgressResetCursorFuture.handle((ignore, ignoreEx) -> null)
-                    .thenCompose(ignore -> addConsumerInternal(consumer));
-        } else {
-            return addConsumerInternal(consumer);
-        }
-    }
-
-    private CompletableFuture<Void> addConsumerInternal(Consumer consumer) {
         return pendingAckHandle.pendingAckHandleFuture().thenCompose(future -> {
             synchronized (PersistentSubscription.this) {
                 cursor.updateLastActive();
@@ -241,23 +221,26 @@ public class PersistentSubscription extends AbstractSubscription {
 
                 if (dispatcher == null || !dispatcher.isConsumerConnected()) {
                     Dispatcher previousDispatcher = null;
+                    boolean useStreamingDispatcher = topic.getBrokerService().getPulsar()
+                            .getConfiguration().isStreamingDispatch();
                     switch (consumer.subType()) {
                         case Exclusive:
                             if (dispatcher == null || dispatcher.getType() != SubType.Exclusive) {
                                 previousDispatcher = dispatcher;
-                                dispatcher = new PersistentDispatcherSingleActiveConsumer(
-                                        cursor, SubType.Exclusive, 0, topic, this);
+                                dispatcher = useStreamingDispatcher
+                                        ? new PersistentStreamingDispatcherSingleActiveConsumer(
+                                                cursor, SubType.Exclusive, 0, topic, this)
+                                        : new PersistentDispatcherSingleActiveConsumer(
+                                                cursor, SubType.Exclusive, 0, topic, this);
                             }
                             break;
                         case Shared:
                             if (dispatcher == null || dispatcher.getType() != SubType.Shared) {
                                 previousDispatcher = dispatcher;
-                                ServiceConfiguration config = topic.getBrokerService().getPulsar().getConfig();
-                                if (config.isSubscriptionSharedUseClassicPersistentImplementation()) {
-                                    dispatcher = new PersistentDispatcherMultipleConsumersClassic(topic, cursor, this);
-                                } else {
-                                    dispatcher = new PersistentDispatcherMultipleConsumers(topic, cursor, this);
-                                }
+                                dispatcher = useStreamingDispatcher
+                                        ? new PersistentStreamingDispatcherMultipleConsumers(
+                                                topic, cursor, this)
+                                        : new PersistentDispatcherMultipleConsumers(topic, cursor, this);
                             }
                             break;
                         case Failover:
@@ -271,26 +254,21 @@ public class PersistentSubscription extends AbstractSubscription {
 
                             if (dispatcher == null || dispatcher.getType() != SubType.Failover) {
                                 previousDispatcher = dispatcher;
-                                dispatcher = new PersistentDispatcherSingleActiveConsumer(cursor, SubType.Failover,
+                                dispatcher = useStreamingDispatcher
+                                        ? new PersistentStreamingDispatcherSingleActiveConsumer(
+                                                cursor, SubType.Failover, partitionIndex, topic, this) :
+                                        new PersistentDispatcherSingleActiveConsumer(cursor, SubType.Failover,
                                                 partitionIndex, topic, this);
                             }
                             break;
                         case Key_Shared:
                             KeySharedMeta ksm = consumer.getKeySharedMeta();
                             if (dispatcher == null || dispatcher.getType() != SubType.Key_Shared
-                                    || !((StickyKeyDispatcher) dispatcher)
-                                    .hasSameKeySharedPolicy(ksm)) {
+                                    || !((PersistentStickyKeyDispatcherMultipleConsumers) dispatcher)
+                                            .hasSameKeySharedPolicy(ksm)) {
                                 previousDispatcher = dispatcher;
-                                ServiceConfiguration config = topic.getBrokerService().getPulsar().getConfig();
-                                if (config.isSubscriptionKeySharedUseClassicPersistentImplementation()) {
-                                    dispatcher =
-                                            new PersistentStickyKeyDispatcherMultipleConsumersClassic(topic, cursor,
-                                                    this,
-                                                    topic.getBrokerService().getPulsar().getConfiguration(), ksm);
-                                } else {
-                                    dispatcher = new PersistentStickyKeyDispatcherMultipleConsumers(topic, cursor, this,
-                                            topic.getBrokerService().getPulsar().getConfiguration(), ksm);
-                                }
+                                dispatcher = new PersistentStickyKeyDispatcherMultipleConsumers(topic, cursor, this,
+                                        topic.getBrokerService().getPulsar().getConfiguration(), ksm);
                             }
                             break;
                         default:
@@ -307,10 +285,9 @@ public class PersistentSubscription extends AbstractSubscription {
                         });
                     }
                 } else {
-                    Optional<CompletableFuture<Void>> compatibilityError =
-                            checkForConsumerCompatibilityErrorWithDispatcher(dispatcher, consumer);
-                    if (compatibilityError.isPresent()) {
-                        return compatibilityError.get();
+                    if (consumer.subType() != dispatcher.getType()) {
+                        return FutureUtil.failedFuture(
+                                new SubscriptionBusyException("Subscription is of different type"));
                     }
                 }
 
@@ -333,11 +310,11 @@ public class PersistentSubscription extends AbstractSubscription {
 
         if (dispatcher != null && dispatcher.getConsumers().isEmpty()) {
             deactivateCursor();
+            topic.getManagedLedger().removeWaitingCursor(cursor);
 
             if (!cursor.isDurable()) {
-                // If cursor is not durable, we need to clean up the subscription as well. No need to check for active
-                // consumers since we already validated that there are no consumers on this dispatcher.
-                this.closeCursor(false).thenRun(() -> {
+                // If cursor is not durable, we need to clean up the subscription as well
+                this.close().thenRun(() -> {
                     synchronized (this) {
                         if (dispatcher != null) {
                             dispatcher.close().thenRun(() -> {
@@ -355,22 +332,18 @@ public class PersistentSubscription extends AbstractSubscription {
 
                 // when topic closes: it iterates through concurrent-subscription map to close each subscription. so,
                 // topic.remove again try to access same map which creates deadlock. so, execute it in different thread.
-                topic.getBrokerService().pulsar().getExecutor().execute(() -> {
-                    topic.removeSubscription(subName).thenRunAsync(() -> {
-                        // Also need remove the cursor here, otherwise the data deletion will not work well.
-                        // Because data deletion depends on the mark delete position of all cursors.
-                        if (!isResetCursor) {
-                            try {
-                                topic.getManagedLedger().deleteCursor(cursor.getName());
-                                topic.getManagedLedger().removeWaitingCursor(cursor);
-                            } catch (InterruptedException | ManagedLedgerException e) {
-                                log.warn("[{}] [{}] Failed to remove non durable cursor", topic.getName(), subName, e);
-                            }
+                topic.getBrokerService().pulsar().getExecutor().submit(() ->{
+                    topic.removeSubscription(subName);
+                    // Also need remove the cursor here, otherwise the data deletion will not work well.
+                    // Because data deletion depends on the mark delete position of all cursors.
+                    if (!isResetCursor) {
+                        try {
+                            topic.getManagedLedger().deleteCursor(cursor.getName());
+                        } catch (InterruptedException | ManagedLedgerException e) {
+                            log.warn("[{}] [{}] Failed to remove non durable cursor", topic.getName(), subName, e);
                         }
-                    }, topic.getBrokerService().pulsar().getExecutor());
+                    }
                 });
-            } else {
-                topic.getManagedLedger().removeWaitingCursor(cursor);
             }
         }
 
@@ -395,7 +368,6 @@ public class PersistentSubscription extends AbstractSubscription {
 
     @Override
     public void acknowledgeMessage(List<Position> positions, AckType ackType, Map<String, Long> properties) {
-        cursor.updateLastActive();
         Position previousMarkDeletePosition = cursor.getMarkDeletedPosition();
 
         if (ackType == AckType.Cumulative) {
@@ -419,7 +391,7 @@ public class PersistentSubscription extends AbstractSubscription {
             cursor.asyncDelete(positions, deleteCallback, previousMarkDeletePosition);
             if (topic.getBrokerService().getPulsar().getConfig().isTransactionCoordinatorEnabled()) {
                 positions.forEach(position -> {
-                    if ((cursor.isMessageDeleted(position))) {
+                    if (((ManagedCursorImpl) cursor).isMessageDeleted(position)) {
                         pendingAckHandle.clearIndividualPosition(position);
                     }
                 });
@@ -434,10 +406,10 @@ public class PersistentSubscription extends AbstractSubscription {
             this.updateLastMarkDeleteAdvancedTimestamp();
 
             // Mark delete position advance
-            ReplicatedSubscriptionSnapshotCache snapshotCache = this.replicatedSubscriptionSnapshotCache;
+            ReplicatedSubscriptionSnapshotCache snapshotCache  = this.replicatedSubscriptionSnapshotCache;
             if (snapshotCache != null) {
                 ReplicatedSubscriptionsSnapshot snapshot = snapshotCache
-                        .advancedMarkDeletePosition(cursor.getMarkDeletedPosition());
+                        .advancedMarkDeletePosition((PositionImpl) cursor.getMarkDeletedPosition());
                 if (snapshot != null) {
                     topic.getReplicatedSubscriptionController()
                             .ifPresent(c -> c.localSubscriptionUpdated(subName, snapshot));
@@ -448,33 +420,29 @@ public class PersistentSubscription extends AbstractSubscription {
         if (topic.getManagedLedger().isTerminated() && cursor.getNumberOfEntriesInBacklog(false) == 0) {
             // Notify all consumer that the end of topic was reached
             if (dispatcher != null) {
-                checkAndApplyReachedEndOfTopicOrTopicMigration(topic, dispatcher.getConsumers());
+                dispatcher.getConsumers().forEach(Consumer::reachedEndOfTopic);
             }
         }
     }
 
     public CompletableFuture<Void> transactionIndividualAcknowledge(
             TxnID txnId,
-            List<MutablePair<Position, Integer>> positions) {
+            List<MutablePair<PositionImpl, Integer>> positions) {
         return pendingAckHandle.individualAcknowledgeMessage(txnId, positions);
     }
 
-    public CompletableFuture<Void> transactionCumulativeAcknowledge(TxnID txnId, List<Position> positions) {
+    public CompletableFuture<Void> transactionCumulativeAcknowledge(TxnID txnId, List<PositionImpl> positions) {
         return pendingAckHandle.cumulativeAcknowledgeMessage(txnId, positions);
     }
 
     private final MarkDeleteCallback markDeleteCallback = new MarkDeleteCallback() {
         @Override
         public void markDeleteComplete(Object ctx) {
-            Position oldMD = (Position) ctx;
-            Position newMD = cursor.getMarkDeletedPosition();
+            PositionImpl oldMD = (PositionImpl) ctx;
+            PositionImpl newMD = (PositionImpl) cursor.getMarkDeletedPosition();
             if (log.isDebugEnabled()) {
                 log.debug("[{}][{}] Mark deleted messages to position {} from position {}",
                         topicName, subName, newMD, oldMD);
-            }
-            // Signal the dispatchers to give chance to take extra actions
-            if (dispatcher != null) {
-                dispatcher.afterAckMessages(null, ctx);
             }
             // Signal the dispatchers to give chance to take extra actions
             notifyTheMarkDeletePositionMoveForwardIfNeeded(oldMD);
@@ -486,40 +454,28 @@ public class PersistentSubscription extends AbstractSubscription {
             if (log.isDebugEnabled()) {
                 log.debug("[{}][{}] Failed to mark delete for position {}: {}", topicName, subName, ctx, exception);
             }
-            // Signal the dispatchers to give chance to take extra actions
-            if (dispatcher != null) {
-                dispatcher.afterAckMessages(null, ctx);
-            }
         }
     };
 
     private final DeleteCallback deleteCallback = new DeleteCallback() {
         @Override
-        public void deleteComplete(Object context) {
+        public void deleteComplete(Object position) {
             if (log.isDebugEnabled()) {
-                // The value of the param "context" is a position.
-                log.debug("[{}][{}] Deleted message at {}", topicName, subName, context);
+                log.debug("[{}][{}] Deleted message at {}", topicName, subName, position);
             }
             // Signal the dispatchers to give chance to take extra actions
-            if (dispatcher != null) {
-                dispatcher.afterAckMessages(null, context);
-            }
-            notifyTheMarkDeletePositionMoveForwardIfNeeded((Position) context);
+            notifyTheMarkDeletePositionMoveForwardIfNeeded((PositionImpl) position);
         }
 
         @Override
         public void deleteFailed(ManagedLedgerException exception, Object ctx) {
             log.warn("[{}][{}] Failed to delete message at {}: {}", topicName, subName, ctx, exception);
-            // Signal the dispatchers to give chance to take extra actions
-            if (dispatcher != null) {
-                dispatcher.afterAckMessages(exception, ctx);
-            }
         }
     };
 
     private void notifyTheMarkDeletePositionMoveForwardIfNeeded(Position oldPosition) {
-        Position oldMD = oldPosition;
-        Position newMD = cursor.getMarkDeletedPosition();
+        PositionImpl oldMD = (PositionImpl) oldPosition;
+        PositionImpl newMD = (PositionImpl) cursor.getMarkDeletedPosition();
         if (dispatcher != null && newMD.compareTo(oldMD) > 0) {
             dispatcher.markDeletePositionMoveForward();
         }
@@ -548,28 +504,22 @@ public class PersistentSubscription extends AbstractSubscription {
         }
 
         switch (type) {
-            case Exclusive:
-                return "Exclusive";
-            case Failover:
-                return "Failover";
-            case Shared:
-                return "Shared";
-            case Key_Shared:
-                return "Key_Shared";
+        case Exclusive:
+            return "Exclusive";
+        case Failover:
+            return "Failover";
+        case Shared:
+            return "Shared";
+        case Key_Shared:
+            return "Key_Shared";
         }
 
         return "Null";
     }
 
+    @Override
     public CompletableFuture<AnalyzeBacklogResult> analyzeBacklog(Optional<Position> position) {
-        final ManagedLedger managedLedger = topic.getManagedLedger();
-        final String newNonDurableCursorName = "analyze-backlog-" + UUID.randomUUID();
-        ManagedCursor newNonDurableCursor;
-        try {
-            newNonDurableCursor = cursor.duplicateNonDurableCursor(newNonDurableCursorName);
-        } catch (ManagedLedgerException e) {
-            return CompletableFuture.failedFuture(e);
-        }
+
         long start = System.currentTimeMillis();
         if (log.isDebugEnabled()) {
             log.debug("[{}][{}] Starting to analyze backlog", topicName, subName);
@@ -584,7 +534,7 @@ public class PersistentSubscription extends AbstractSubscription {
         AtomicLong rejectedMessages = new AtomicLong();
         AtomicLong rescheduledMessages = new AtomicLong();
 
-        Position currentPosition = newNonDurableCursor.getMarkDeletedPosition();
+        Position currentPosition = cursor.getMarkDeletedPosition();
 
         if (log.isDebugEnabled()) {
             log.debug("[{}][{}] currentPosition {}",
@@ -599,58 +549,54 @@ public class PersistentSubscription extends AbstractSubscription {
         int batchSize = configuration.getDispatcherMaxReadBatchSize();
         AtomicReference<Position> firstPosition = new AtomicReference<>();
         AtomicReference<Position> lastPosition = new AtomicReference<>();
-        final Predicate<Entry> condition = entry -> {
-            if (log.isDebugEnabled()) {
-                log.debug("found {}", entry);
-            }
-            Position entryPosition = entry.getPosition();
-            firstPosition.compareAndSet(null, entryPosition);
-            lastPosition.set(entryPosition);
-            ByteBuf metadataAndPayload = entry.getDataBuffer();
-            MessageMetadata messageMetadata = Commands.peekMessageMetadata(metadataAndPayload, "", -1);
-            int numMessages = 1;
-            if (messageMetadata.hasNumMessagesInBatch()) {
-                numMessages = messageMetadata.getNumMessagesInBatch();
-            }
-            EntryFilter.FilterResult filterResult = entryFilterSupport
-                    .runFiltersForEntry(entry, messageMetadata, null);
+        return cursor.scan(position, new Predicate<Entry>() {
+            @Override
+            public boolean apply(Entry entry) {
+                if (log.isDebugEnabled()) {
+                    log.debug("found {}", entry);
+                }
+                Position entryPosition = entry.getPosition();
+                firstPosition.compareAndSet(null, entryPosition);
+                lastPosition.set(entryPosition);
+                ByteBuf metadataAndPayload = entry.getDataBuffer();
+                MessageMetadata messageMetadata = Commands.peekMessageMetadata(metadataAndPayload, "", -1);
+                int numMessages = 1;
+                if (messageMetadata.hasNumMessagesInBatch()) {
+                    numMessages = messageMetadata.getNumMessagesInBatch();
+                }
+                EntryFilter.FilterResult filterResult = entryFilterSupport
+                        .runFiltersForEntry(entry, messageMetadata, null);
 
-            if (filterResult == null) {
-                filterResult = EntryFilter.FilterResult.ACCEPT;
-            }
-            switch (filterResult) {
-                case REJECT:
-                    rejected.incrementAndGet();
-                    rejectedMessages.addAndGet(numMessages);
-                    break;
-                case RESCHEDULE:
-                    rescheduled.incrementAndGet();
-                    rescheduledMessages.addAndGet(numMessages);
-                    break;
-                default:
-                    accepted.incrementAndGet();
-                    acceptedMessages.addAndGet(numMessages);
-                    break;
-            }
-            long num = entries.incrementAndGet();
-            messages.addAndGet(numMessages);
+                if (filterResult == null) {
+                    filterResult = EntryFilter.FilterResult.ACCEPT;
+                }
+                switch (filterResult) {
+                    case REJECT:
+                        rejected.incrementAndGet();
+                        rejectedMessages.addAndGet(numMessages);
+                        break;
+                    case RESCHEDULE:
+                        rescheduled.incrementAndGet();
+                        rescheduledMessages.addAndGet(numMessages);
+                        break;
+                    default:
+                        accepted.incrementAndGet();
+                        acceptedMessages.addAndGet(numMessages);
+                        break;
+                }
+                long num = entries.incrementAndGet();
+                messages.addAndGet(numMessages);
 
-            if (num % 1000 == 0) {
-                long end = System.currentTimeMillis();
-                log.info(
-                        "[{}][{}] scan running since {} ms - scanned {} entries",
-                        topicName, subName, end - start, num);
-            }
+                if (num % 1000 == 0) {
+                    long end = System.currentTimeMillis();
+                    log.info(
+                            "[{}][{}] scan running since {} ms - scanned {} entries",
+                            topicName, subName, end - start, num);
+                }
 
-            return true;
-        };
-        CompletableFuture<AnalyzeBacklogResult> res = newNonDurableCursor.scan(
-                position,
-                condition,
-                batchSize,
-                maxEntries,
-                timeOutMs
-        ).thenApply((ScanOutcome outcome) -> {
+                return true;
+            }
+        }, batchSize, maxEntries, timeOutMs).thenApply((ScanOutcome outcome) -> {
             long end = System.currentTimeMillis();
             AnalyzeBacklogResult result = new AnalyzeBacklogResult();
             result.setFirstPosition(firstPosition.get());
@@ -671,22 +617,7 @@ public class PersistentSubscription extends AbstractSubscription {
                     topicName, subName, end - start, result);
             return result;
         });
-        res.whenComplete((__, ex) -> {
-            managedLedger.asyncDeleteCursor(newNonDurableCursorName,
-                new AsyncCallbacks.DeleteCursorCallback(){
-                    @Override
-                    public void deleteCursorComplete(Object ctx) {
-                        // Nothing to do.
-                    }
 
-                    @Override
-                    public void deleteCursorFailed(ManagedLedgerException exception, Object ctx) {
-                        log.warn("[{}][{}] Delete non-durable cursor[{}] failed when analyze backlog.",
-                                topicName, subName, newNonDurableCursor.getName());
-                    }
-                }, null);
-        });
-        return res;
     }
 
     @Override
@@ -706,26 +637,15 @@ public class PersistentSubscription extends AbstractSubscription {
                             cursor.getNumberOfEntriesInBacklog(false));
                 }
                 if (dispatcher != null) {
-                    dispatcher.clearDelayedMessages().whenComplete((__, ex) -> {
-                        if (ex != null) {
-                            future.completeExceptionally(ex);
-                        } else {
-                            future.complete(null);
-                        }
-                    });
-                    dispatcher.afterAckMessages(null, ctx);
-                } else {
-                    future.complete(null);
+                    dispatcher.clearDelayedMessages();
                 }
+                future.complete(null);
             }
 
             @Override
             public void clearBacklogFailed(ManagedLedgerException exception, Object ctx) {
                 log.error("[{}][{}] Failed to clear backlog", topicName, subName, exception);
                 future.completeExceptionally(exception);
-                if (dispatcher != null) {
-                    dispatcher.afterAckMessages(exception, ctx);
-                }
             }
         }, null);
 
@@ -749,9 +669,6 @@ public class PersistentSubscription extends AbstractSubscription {
                                     numMessagesToSkip, cursor.getNumberOfEntriesInBacklog(false));
                         }
                         future.complete(null);
-                        if (dispatcher != null) {
-                            dispatcher.afterAckMessages(null, ctx);
-                        }
                     }
 
                     @Override
@@ -759,9 +676,6 @@ public class PersistentSubscription extends AbstractSubscription {
                         log.error("[{}][{}] Failed to skip {} messages", topicName, subName, numMessagesToSkip,
                                 exception);
                         future.completeExceptionally(exception);
-                        if (dispatcher != null) {
-                            dispatcher.afterAckMessages(exception, ctx);
-                        }
                     }
                 }, null);
 
@@ -800,8 +714,7 @@ public class PersistentSubscription extends AbstractSubscription {
                 } else {
                     finalPosition = position.getNext();
                 }
-                CompletableFuture<Void> resetCursorFuture = resetCursor(finalPosition);
-                FutureUtil.completeAfter(future, resetCursorFuture);
+                resetCursor(finalPosition, future);
             }
 
             @Override
@@ -820,13 +733,18 @@ public class PersistentSubscription extends AbstractSubscription {
     }
 
     @Override
-    public CompletableFuture<Void> resetCursor(Position finalPosition) {
+    public CompletableFuture<Void> resetCursor(Position position) {
+        CompletableFuture<Void> future = new CompletableFuture<>();
+        resetCursor(position, future);
+        return future;
+    }
+
+    private void resetCursor(Position finalPosition, CompletableFuture<Void> future) {
         if (!IS_FENCED_UPDATER.compareAndSet(PersistentSubscription.this, FALSE, TRUE)) {
-            return CompletableFuture.failedFuture(new SubscriptionBusyException("Failed to fence subscription"));
+            future.completeExceptionally(new SubscriptionBusyException("Failed to fence subscription"));
+            return;
         }
 
-        final CompletableFuture<Void> future = new CompletableFuture<>();
-        inProgressResetCursorFuture = future;
         final CompletableFuture<Void> disconnectFuture;
 
         // Lock the Subscription object before locking the Dispatcher object to avoid deadlocks
@@ -846,7 +764,6 @@ public class PersistentSubscription extends AbstractSubscription {
             if (throwable != null) {
                 log.error("[{}][{}] Failed to disconnect consumer from subscription", topicName, subName, throwable);
                 IS_FENCED_UPDATER.set(PersistentSubscription.this, FALSE);
-                inProgressResetCursorFuture = null;
                 future.completeExceptionally(
                         new SubscriptionBusyException("Failed to disconnect consumers from subscription"));
                 return;
@@ -855,26 +772,16 @@ public class PersistentSubscription extends AbstractSubscription {
             log.info("[{}][{}] Successfully disconnected consumers from subscription, proceeding with cursor reset",
                     topicName, subName);
 
-            CompletableFuture<Boolean> forceReset = new CompletableFuture<>();
-            if (topic.getTopicCompactionService() == null) {
-                forceReset.complete(false);
-            } else {
-                topic.getTopicCompactionService().getLastCompactedPosition().thenAccept(lastCompactedPosition -> {
-                    Position resetTo = finalPosition;
-                    if (lastCompactedPosition != null && resetTo.compareTo(lastCompactedPosition.getLedgerId(),
-                            lastCompactedPosition.getEntryId()) <= 0) {
-                        forceReset.complete(true);
-                    } else {
-                        forceReset.complete(false);
+            try {
+                boolean forceReset = false;
+                if (topic.getCompactedTopic() != null && topic.getCompactedTopic().getCompactionHorizon().isPresent()) {
+                    PositionImpl horizon = (PositionImpl) topic.getCompactedTopic().getCompactionHorizon().get();
+                    PositionImpl resetTo = (PositionImpl) finalPosition;
+                    if (horizon.compareTo(resetTo) >= 0) {
+                        forceReset = true;
                     }
-                }).exceptionally(ex -> {
-                    forceReset.completeExceptionally(ex);
-                    return null;
-                });
-            }
-
-            forceReset.thenAccept(forceResetValue -> {
-                cursor.asyncResetCursor(finalPosition, forceResetValue, new AsyncCallbacks.ResetCursorCallback() {
+                }
+                cursor.asyncResetCursor(finalPosition, forceReset, new AsyncCallbacks.ResetCursorCallback() {
                     @Override
                     public void resetComplete(Object ctx) {
                         if (log.isDebugEnabled()) {
@@ -883,10 +790,8 @@ public class PersistentSubscription extends AbstractSubscription {
                         }
                         if (dispatcher != null) {
                             dispatcher.cursorIsReset();
-                            dispatcher.afterAckMessages(null, finalPosition);
                         }
                         IS_FENCED_UPDATER.set(PersistentSubscription.this, FALSE);
-                        inProgressResetCursorFuture = null;
                         future.complete(null);
                     }
 
@@ -895,7 +800,6 @@ public class PersistentSubscription extends AbstractSubscription {
                         log.error("[{}][{}] Failed to reset subscription to position {}", topicName, subName,
                                 finalPosition, exception);
                         IS_FENCED_UPDATER.set(PersistentSubscription.this, FALSE);
-                        inProgressResetCursorFuture = null;
                         // todo - retry on InvalidCursorPositionException
                         // or should we just ask user to retry one more time?
                         if (exception instanceof InvalidCursorPositionException) {
@@ -907,15 +811,12 @@ public class PersistentSubscription extends AbstractSubscription {
                         }
                     }
                 });
-            }).exceptionally((e) -> {
+            } catch (Exception e) {
                 log.error("[{}][{}] Error while resetting cursor", topicName, subName, e);
                 IS_FENCED_UPDATER.set(PersistentSubscription.this, FALSE);
-                inProgressResetCursorFuture = null;
                 future.completeExceptionally(new BrokerServiceException(e));
-                return null;
-            });
+            }
         });
-        return future;
     }
 
     @Override
@@ -936,12 +837,6 @@ public class PersistentSubscription extends AbstractSubscription {
             @Override
             public void readEntryComplete(Entry entry, Object ctx) {
                 future.complete(entry);
-            }
-
-            @Override
-            public String toString() {
-                return String.format("Subscription [%s-%s] async replay entries", PersistentSubscription.this.topicName,
-                        PersistentSubscription.this.subName);
             }
         }, null);
 
@@ -967,77 +862,49 @@ public class PersistentSubscription extends AbstractSubscription {
     }
 
     /**
-     * Close the cursor ledger for this subscription. Optionally verifies that there are no active consumers on the
-     * dispatcher.
+     * Close the cursor ledger for this subscription. Requires that there are no active consumers on the dispatcher
      *
-     * @return CompletableFuture indicating the completion of close operation
+     * @return CompletableFuture indicating the completion of delete operation
      */
-    private synchronized CompletableFuture<Void> closeCursor(boolean checkActiveConsumers) {
-        if (checkActiveConsumers && dispatcher != null && dispatcher.isConsumerConnected()) {
-            return FutureUtil.failedFuture(new SubscriptionBusyException("Subscription has active consumers"));
+    @Override
+    public CompletableFuture<Void> close() {
+        synchronized (this) {
+            if (dispatcher != null && dispatcher.isConsumerConnected()) {
+                return FutureUtil.failedFuture(new SubscriptionBusyException("Subscription has active consumers"));
+            }
+            return this.pendingAckHandle.closeAsync().thenAccept(v -> {
+                IS_FENCED_UPDATER.set(this, TRUE);
+                log.info("[{}][{}] Successfully closed subscription [{}]", topicName, subName, cursor);
+            });
         }
-        return this.pendingAckHandle.closeAsync().thenAccept(v -> {
-            IS_FENCED_UPDATER.set(this, TRUE);
-            log.info("[{}][{}] Successfully closed subscription [{}]", topicName, subName, cursor);
-        });
-    }
-
-
-    /**
-     * Disconnect all consumers from this subscription.
-     *
-     * @return CompletableFuture indicating the completion of the operation.
-     */
-    @Override
-    public synchronized CompletableFuture<Void> disconnect(Optional<BrokerLookupData> assignedBrokerLookupData) {
-        CompletableFuture<Void> disconnectFuture = new CompletableFuture<>();
-
-        (dispatcher != null
-                ? dispatcher.disconnectAllConsumers(false, assignedBrokerLookupData)
-                : CompletableFuture.completedFuture(null))
-                .thenRun(() -> {
-                    log.info("[{}][{}] Successfully disconnected subscription consumers", topicName, subName);
-                    disconnectFuture.complete(null);
-                }).exceptionally(exception -> {
-                    log.error("[{}][{}] Error disconnecting subscription consumers", topicName, subName, exception);
-                    disconnectFuture.completeExceptionally(exception);
-                    return null;
-                });
-
-        return disconnectFuture;
     }
 
     /**
-     * Fence this subscription and optionally disconnect all consumers.
+     * Disconnect all consumers attached to the dispatcher and close this subscription.
      *
-     * @return CompletableFuture indicating the completion of the operation.
+     * @return CompletableFuture indicating the completion of disconnect operation
      */
     @Override
-    public synchronized CompletableFuture<Void> close(boolean disconnectConsumers,
-                                                      Optional<BrokerLookupData> assignedBrokerLookupData) {
-        if (fenceFuture != null) {
+    public synchronized CompletableFuture<Void> disconnect() {
+        if (fenceFuture != null){
             return fenceFuture;
         }
-
         fenceFuture = new CompletableFuture<>();
 
         // block any further consumers on this subscription
         IS_FENCED_UPDATER.set(this, TRUE);
 
-        (dispatcher != null
-                ? dispatcher.close(disconnectConsumers, assignedBrokerLookupData)
-                : CompletableFuture.completedFuture(null))
-                // checkActiveConsumers is false since we just closed all of them if we wanted.
-                .thenCompose(__ -> closeCursor(false)).thenRun(() -> {
-                    log.info("[{}][{}] Successfully closed the subscription", topicName, subName);
+        (dispatcher != null ? dispatcher.close() : CompletableFuture.completedFuture(null))
+                .thenCompose(v -> close()).thenRun(() -> {
+                    log.info("[{}][{}] Successfully disconnected and closed subscription", topicName, subName);
                     fenceFuture.complete(null);
                 }).exceptionally(exception -> {
-                    log.error("[{}][{}] Error closing the subscription", topicName, subName, exception);
+                    log.error("[{}][{}] Error disconnecting consumers from subscription", topicName, subName,
+                            exception);
                     fenceFuture.completeExceptionally(exception);
                     resumeAfterFence();
                     return null;
                 });
-
         return fenceFuture;
     }
 
@@ -1045,7 +912,7 @@ public class PersistentSubscription extends AbstractSubscription {
      * Resume subscription after topic deletion or close failure.
      */
     public synchronized void resumeAfterFence() {
-        // If "fenceFuture" is null, it means that "close" has never been called.
+        // If "fenceFuture" is null, it means that "disconnect" has never been called.
         if (fenceFuture != null) {
             fenceFuture.whenComplete((ignore, ignoreEx) -> {
                 synchronized (PersistentSubscription.this) {
@@ -1077,7 +944,6 @@ public class PersistentSubscription extends AbstractSubscription {
 
     /**
      * Forcefully close all consumers and deletes the subscription.
-     *
      * @return
      */
     @Override
@@ -1088,10 +954,9 @@ public class PersistentSubscription extends AbstractSubscription {
     /**
      * Delete the subscription by closing and deleting its managed cursor. Handle unsubscribe call from admin layer.
      *
-     * @param closeIfConsumersConnected Flag indicate whether explicitly close connected consumers before trying to
-     *                                  delete subscription. If
-     *                                  any consumer is connected to it and if this flag is disable then this operation
-     *                                  fails.
+     * @param closeIfConsumersConnected
+     *            Flag indicate whether explicitly close connected consumers before trying to delete subscription. If
+     *            any consumer is connected to it and if this flag is disable then this operation fails.
      * @return CompletableFuture indicating the completion of delete operation
      */
     private CompletableFuture<Void> delete(boolean closeIfConsumersConnected) {
@@ -1102,7 +967,7 @@ public class PersistentSubscription extends AbstractSubscription {
         CompletableFuture<Void> closeSubscriptionFuture = new CompletableFuture<>();
 
         if (closeIfConsumersConnected) {
-            this.close(true, Optional.empty()).thenRun(() -> {
+            this.disconnect().thenRun(() -> {
                 closeSubscriptionFuture.complete(null);
             }).exceptionally(ex -> {
                 log.error("[{}][{}] Error disconnecting and closing subscription", topicName, subName, ex);
@@ -1110,7 +975,7 @@ public class PersistentSubscription extends AbstractSubscription {
                 return null;
             });
         } else {
-            this.closeCursor(true).thenRun(() -> {
+            this.close().thenRun(() -> {
                 closeSubscriptionFuture.complete(null);
             }).exceptionally(exception -> {
                 log.error("[{}][{}] Error closing subscription", topicName, subName, exception);
@@ -1154,27 +1019,11 @@ public class PersistentSubscription extends AbstractSubscription {
      */
     @Override
     public CompletableFuture<Void> doUnsubscribe(Consumer consumer) {
-        return doUnsubscribe(consumer, false);
-    }
-
-    /**
-     * Handle unsubscribe command from the client API Check with the dispatcher is this consumer can proceed with
-     * unsubscribe.
-     *
-     * @param consumer consumer object that is initiating the unsubscribe operation
-     * @param force unsubscribe forcefully by disconnecting consumers and closing subscription
-     * @return CompletableFuture indicating the completion of unsubscribe operation
-     */
-    @Override
-    public CompletableFuture<Void> doUnsubscribe(Consumer consumer, boolean force) {
         CompletableFuture<Void> future = new CompletableFuture<>();
         try {
-            if (force || dispatcher.canUnsubscribe(consumer)) {
-                if (log.isDebugEnabled()) {
-                    log.debug("[{}] unsubscribing forcefully {}-{}", topicName, subName, consumer.consumerName());
-                }
+            if (dispatcher.canUnsubscribe(consumer)) {
                 consumer.close();
-                return delete(force);
+                return delete();
             }
             future.completeExceptionally(
                     new ServerMetadataException("Unconnected or shared consumer attempting to unsubscribe"));
@@ -1226,7 +1075,8 @@ public class PersistentSubscription extends AbstractSubscription {
         return cursor.getEstimatedSizeSinceMarkDeletePosition();
     }
 
-    public CompletableFuture<SubscriptionStatsImpl> getStatsAsync(GetStatsOptions getStatsOptions) {
+    public SubscriptionStatsImpl getStats(Boolean getPreciseBacklog, boolean subscriptionBacklogSize,
+                                          boolean getEarliestTimeInBacklog) {
         SubscriptionStatsImpl subStats = new SubscriptionStatsImpl();
         subStats.lastExpireTimestamp = lastExpireTimestamp;
         subStats.lastConsumedFlowTimestamp = lastConsumedFlowTimestamp;
@@ -1237,12 +1087,10 @@ public class PersistentSubscription extends AbstractSubscription {
         Dispatcher dispatcher = this.dispatcher;
         if (dispatcher != null) {
             Map<Consumer, List<Range>> consumerKeyHashRanges = getType() == SubType.Key_Shared
-                    ? ((StickyKeyDispatcher) dispatcher).getConsumerKeyHashRanges() : null;
+                    ? ((PersistentStickyKeyDispatcherMultipleConsumers) dispatcher).getConsumerKeyHashRanges() : null;
             dispatcher.getConsumers().forEach(consumer -> {
                 ConsumerStatsImpl consumerStats = consumer.getStats();
-                if (!getStatsOptions.isExcludeConsumers()) {
-                    subStats.consumers.add(consumerStats);
-                }
+                subStats.consumers.add(consumerStats);
                 subStats.msgRateOut += consumerStats.msgRateOut;
                 subStats.msgThroughputOut += consumerStats.msgThroughputOut;
                 subStats.bytesOutCounter += consumerStats.bytesOutCounter;
@@ -1254,23 +1102,11 @@ public class PersistentSubscription extends AbstractSubscription {
                 subStats.lastConsumedTimestamp =
                         Math.max(subStats.lastConsumedTimestamp, consumerStats.lastConsumedTimestamp);
                 subStats.lastAckedTimestamp = Math.max(subStats.lastAckedTimestamp, consumerStats.lastAckedTimestamp);
-                List<Range> keyRanges = consumerKeyHashRanges != null ? consumerKeyHashRanges.get(consumer) : null;
-                if (keyRanges != null) {
-                    if (((StickyKeyDispatcher) dispatcher).isClassic()) {
-                        // Use string representation for classic mode
-                        consumerStats.keyHashRanges = keyRanges.stream()
-                                .map(Range::toString)
-                                .collect(Collectors.toList());
-                    } else {
-                        // Use array representation for PIP-379 stats
-                        consumerStats.keyHashRangeArrays = keyRanges.stream()
-                                .map(range -> new int[]{range.getStart(), range.getEnd()})
-                                .collect(Collectors.toList());
-                    }
+                if (consumerKeyHashRanges != null && consumerKeyHashRanges.containsKey(consumer)) {
+                    consumerStats.keyHashRanges = consumerKeyHashRanges.get(consumer).stream()
+                            .map(Range::toString)
+                            .collect(Collectors.toList());
                 }
-                subStats.drainingHashesCount += consumerStats.drainingHashesCount;
-                subStats.drainingHashesClearedTotal += consumerStats.drainingHashesClearedTotal;
-                subStats.drainingHashesUnackedMessages += consumerStats.drainingHashesUnackedMessages;
             });
 
             subStats.filterProcessedMsgCount = dispatcher.getFilterProcessedMsgCount();
@@ -1287,31 +1123,29 @@ public class PersistentSubscription extends AbstractSubscription {
                 subStats.activeConsumerName = activeConsumer.consumerName();
             }
         }
-
-        if (dispatcher instanceof AbstractPersistentDispatcherMultipleConsumers) {
-            subStats.delayedMessageIndexSizeInBytes =
-                    ((AbstractPersistentDispatcherMultipleConsumers) dispatcher).getDelayedTrackerMemoryUsage();
-
-            subStats.bucketDelayedIndexStats =
-                    ((AbstractPersistentDispatcherMultipleConsumers) dispatcher).getBucketDelayedIndexStats();
-        }
-
         if (Subscription.isIndividualAckMode(subType)) {
-            if (dispatcher instanceof AbstractPersistentDispatcherMultipleConsumers) {
-                AbstractPersistentDispatcherMultipleConsumers d =
-                        (AbstractPersistentDispatcherMultipleConsumers) dispatcher;
+            if (dispatcher instanceof PersistentDispatcherMultipleConsumers) {
+                PersistentDispatcherMultipleConsumers d = (PersistentDispatcherMultipleConsumers) dispatcher;
                 subStats.unackedMessages = d.getTotalUnackedMessages();
                 subStats.blockedSubscriptionOnUnackedMsgs = d.isBlockedDispatcherOnUnackedMsgs();
                 subStats.msgDelayed = d.getNumberOfDelayedMessages();
-                subStats.msgInReplay = d.getNumberOfMessagesInReplay();
             }
         }
-        subStats.msgBacklog = getNumberOfEntriesInBacklog(getStatsOptions.isGetPreciseBacklog());
-        if (getStatsOptions.isSubscriptionBacklogSize()) {
-            subStats.backlogSize = topic.getManagedLedger()
-                    .getEstimatedBacklogSize(cursor.getMarkDeletedPosition());
-        } else {
-            subStats.backlogSize = -1;
+        subStats.msgBacklog = getNumberOfEntriesInBacklog(getPreciseBacklog);
+        if (subscriptionBacklogSize) {
+            subStats.backlogSize = ((ManagedLedgerImpl) topic.getManagedLedger())
+                    .getEstimatedBacklogSize((PositionImpl) cursor.getMarkDeletedPosition());
+        }
+        if (getEarliestTimeInBacklog && subStats.msgBacklog > 0) {
+            ManagedLedgerImpl managedLedger = ((ManagedLedgerImpl) cursor.getManagedLedger());
+            PositionImpl markDeletedPosition = (PositionImpl) cursor.getMarkDeletedPosition();
+            long result = 0;
+            try {
+                result = managedLedger.getEarliestMessagePublishTimeOfPos(markDeletedPosition).get();
+            } catch (InterruptedException | ExecutionException e) {
+                result = -1;
+            }
+            subStats.earliestMsgPublishTimeInBacklog = result;
         }
         subStats.msgBacklogNoDelayed = subStats.msgBacklog - subStats.msgDelayed;
         subStats.msgRateExpired = expiryMonitor.getMessageExpiryRate();
@@ -1319,12 +1153,14 @@ public class PersistentSubscription extends AbstractSubscription {
         subStats.isReplicated = isReplicated();
         subStats.subscriptionProperties = subscriptionProperties;
         subStats.isDurable = cursor.isDurable();
-        if (getType() == SubType.Key_Shared && dispatcher instanceof StickyKeyDispatcher) {
-            StickyKeyDispatcher keySharedDispatcher = (StickyKeyDispatcher) dispatcher;
+        if (getType() == SubType.Key_Shared && dispatcher instanceof PersistentStickyKeyDispatcherMultipleConsumers) {
+            PersistentStickyKeyDispatcherMultipleConsumers keySharedDispatcher =
+                    (PersistentStickyKeyDispatcherMultipleConsumers) dispatcher;
+
             subStats.allowOutOfOrderDelivery = keySharedDispatcher.isAllowOutOfOrderDelivery();
             subStats.keySharedMode = keySharedDispatcher.getKeySharedMode().toString();
 
-            LinkedHashMap<Consumer, Position> recentlyJoinedConsumers = keySharedDispatcher
+            LinkedHashMap<Consumer, PositionImpl> recentlyJoinedConsumers = keySharedDispatcher
                     .getRecentlyJoinedConsumers();
             if (recentlyJoinedConsumers != null && recentlyJoinedConsumers.size() > 0) {
                 recentlyJoinedConsumers.forEach((k, v) -> {
@@ -1335,62 +1171,7 @@ public class PersistentSubscription extends AbstractSubscription {
         subStats.nonContiguousDeletedMessagesRanges = cursor.getTotalNonContiguousDeletedMessagesRange();
         subStats.nonContiguousDeletedMessagesRangesSerializedSize =
                 cursor.getNonContiguousDeletedMessagesRangeSerializedSize();
-        if (!getStatsOptions.isGetEarliestTimeInBacklog()) {
-            return CompletableFuture.completedFuture(subStats);
-        }
-        if (subStats.msgBacklog > 0) {
-            ManagedLedger managedLedger = cursor.getManagedLedger();
-            Position markDeletedPosition = cursor.getMarkDeletedPosition();
-            return getEarliestMessagePublishTimeOfPos(managedLedger, markDeletedPosition).thenApply(v -> {
-                subStats.earliestMsgPublishTimeInBacklog = v;
-                return subStats;
-            });
-        } else {
-            subStats.earliestMsgPublishTimeInBacklog = -1;
-            return CompletableFuture.completedFuture(subStats);
-        }
-    }
-
-    private CompletableFuture<Long> getEarliestMessagePublishTimeOfPos(ManagedLedger ml, Position pos) {
-        CompletableFuture<Long> future = new CompletableFuture<>();
-        if (pos == null) {
-            future.complete(0L);
-            return future;
-        }
-        Position nextPos = ml.getNextValidPosition(pos);
-
-        if (nextPos.compareTo(ml.getLastConfirmedEntry()) > 0) {
-            return CompletableFuture.completedFuture(-1L);
-        }
-
-        ml.asyncReadEntry(nextPos, new ReadEntryCallback() {
-            @Override
-            public void readEntryComplete(Entry entry, Object ctx) {
-                try {
-                    long entryTimestamp = Commands.getEntryTimestamp(entry.getDataBuffer());
-                    future.complete(entryTimestamp);
-                } catch (IOException e) {
-                    log.error("Error deserializing message for message position {}", nextPos, e);
-                    future.completeExceptionally(e);
-                } finally {
-                    entry.release();
-                }
-            }
-
-            @Override
-            public void readEntryFailed(ManagedLedgerException exception, Object ctx) {
-                log.error("Error read entry for position {}", nextPos, exception);
-                future.completeExceptionally(exception);
-            }
-
-            @Override
-            public String toString() {
-                return String.format("ML [%s] get earliest message publish time of pos",
-                        ml.getName());
-            }
-        }, null);
-
-        return future;
+        return subStats;
     }
 
     @Override
@@ -1402,16 +1183,16 @@ public class PersistentSubscription extends AbstractSubscription {
     }
 
     @Override
-    public void redeliverUnacknowledgedMessages(Consumer consumer, List<Position> positions) {
+    public void redeliverUnacknowledgedMessages(Consumer consumer, List<PositionImpl> positions) {
         Dispatcher dispatcher = getDispatcher();
         if (dispatcher != null) {
             dispatcher.redeliverUnacknowledgedMessages(consumer, positions);
         }
     }
 
-    private void trimByMarkDeletePosition(List<Position> positions) {
+    private void trimByMarkDeletePosition(List<PositionImpl> positions) {
         positions.removeIf(position -> cursor.getMarkDeletedPosition() != null
-                && position.compareTo(cursor.getMarkDeletedPosition()) <= 0);
+                && position.compareTo((PositionImpl) cursor.getMarkDeletedPosition()) <= 0);
     }
 
     @Override
@@ -1438,15 +1219,9 @@ public class PersistentSubscription extends AbstractSubscription {
             // notify the consumers if there are consumers connected to this topic.
             if (null != dispatcher) {
                 // Immediately notify the consumer that there are no more available messages
-                checkAndApplyReachedEndOfTopicOrTopicMigration(topic, dispatcher.getConsumers());
+                dispatcher.getConsumers().forEach(Consumer::reachedEndOfTopic);
             }
         }
-    }
-
-    @Override
-    public boolean isSubscriptionMigrated() {
-        log.info("backlog for {} - {}", topicName, cursor.getNumberOfEntriesInBacklog(true));
-        return topic.isMigrated() && cursor.getNumberOfEntriesInBacklog(true) <= 0;
     }
 
     @Override
@@ -1454,7 +1229,7 @@ public class PersistentSubscription extends AbstractSubscription {
         return subscriptionProperties;
     }
 
-    public Position getPositionInPendingAck(Position position) {
+    public PositionImpl getPositionInPendingAck(PositionImpl position) {
         return pendingAckHandle.getPositionInPendingAck(position);
     }
     @Override
@@ -1519,16 +1294,16 @@ public class PersistentSubscription extends AbstractSubscription {
         return cursor;
     }
 
-    public void syncBatchPositionBitSetForPendingAck(Position position) {
+    public void syncBatchPositionBitSetForPendingAck(PositionImpl position) {
         this.pendingAckHandle.syncBatchPositionAckSetForTransaction(position);
     }
 
-    public boolean checkIsCanDeleteConsumerPendingAck(Position position) {
+    public boolean checkIsCanDeleteConsumerPendingAck(PositionImpl position) {
         return this.pendingAckHandle.checkIsCanDeleteConsumerPendingAck(position);
     }
 
-    public TransactionPendingAckStats getTransactionPendingAckStats(boolean lowWaterMarks) {
-        return this.pendingAckHandle.getStats(lowWaterMarks);
+    public TransactionPendingAckStats getTransactionPendingAckStats() {
+        return this.pendingAckHandle.getStats();
     }
 
     public boolean checkAndUnblockIfStuck() {
@@ -1551,10 +1326,10 @@ public class PersistentSubscription extends AbstractSubscription {
         return this.pendingAckHandle.checkIfPendingAckStoreInit();
     }
 
-    public PositionInPendingAckStats checkPositionInPendingAckState(Position position, Integer batchIndex) {
-        return pendingAckHandle.checkPositionInPendingAckState(position, batchIndex);
-    }
-
     private static final Logger log = LoggerFactory.getLogger(PersistentSubscription.class);
 
+    @VisibleForTesting
+    public PendingAckHandle getPendingAckHandle() {
+        return pendingAckHandle;
+    }
 }
