@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,18 +18,20 @@
  */
 package org.apache.pulsar.broker;
 
-import java.util.Map;
+import com.google.common.collect.ImmutableMap;
 import org.apache.pulsar.common.policies.data.BacklogQuota;
 import org.apache.pulsar.common.policies.data.DispatchRate;
 import org.apache.pulsar.common.policies.data.SubscribeRate;
 import org.apache.pulsar.common.policies.data.impl.BacklogQuotaImpl;
+
+import java.util.Map;
 
 public class ConfigHelper {
     private ConfigHelper() {}
 
 
     public static Map<BacklogQuota.BacklogQuotaType, BacklogQuota> backlogQuotaMap(ServiceConfiguration configuration) {
-        return Map.of(BacklogQuota.BacklogQuotaType.destination_storage,
+        return ImmutableMap.of(BacklogQuota.BacklogQuotaType.destination_storage,
                 sizeBacklogQuota(configuration),
                 BacklogQuota.BacklogQuotaType.message_age,
                 timeBacklogQuota(configuration));
