@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,6 +18,8 @@
  */
 package org.apache.pulsar.broker.admin;
 
+import com.google.common.collect.ImmutableSet;
+
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -26,8 +28,8 @@ import java.nio.file.StandardCopyOption;
 import java.security.cert.X509Certificate;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.TimeUnit;
+
 import javax.net.ssl.SSLContext;
 import javax.ws.rs.NotAuthorizedException;
 import javax.ws.rs.client.Client;
@@ -35,8 +37,9 @@ import javax.ws.rs.client.ClientBuilder;
 import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.MediaType;
-import lombok.Cleanup;
+
 import lombok.extern.slf4j.Slf4j;
+
 import org.apache.commons.lang.mutable.MutableBoolean;
 import org.apache.pulsar.broker.auth.MockedPulsarServiceBaseTest;
 import org.apache.pulsar.client.admin.PulsarAdmin;
@@ -45,13 +48,11 @@ import org.apache.pulsar.client.admin.internal.JacksonConfigurator;
 import org.apache.pulsar.client.api.Producer;
 import org.apache.pulsar.client.api.PulsarClient;
 import org.apache.pulsar.client.api.Schema;
-import org.apache.pulsar.common.naming.SystemTopicNames;
-import org.apache.pulsar.common.partition.PartitionedTopicMetadata;
-import org.apache.pulsar.common.policies.data.AuthAction;
 import org.apache.pulsar.common.policies.data.ClusterData;
 import org.apache.pulsar.common.policies.data.ResourceGroup;
-import org.apache.pulsar.common.policies.data.TenantInfoImpl;
 import org.apache.pulsar.common.tls.NoopHostnameVerifier;
+import org.apache.pulsar.common.policies.data.AuthAction;
+import org.apache.pulsar.common.policies.data.TenantInfoImpl;
 import org.apache.pulsar.common.util.SecurityUtility;
 import org.glassfish.jersey.client.ClientConfig;
 import org.glassfish.jersey.client.ClientProperties;
@@ -66,26 +67,30 @@ import org.testng.annotations.Test;
 @Test(groups = "broker-admin")
 public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
 
+    private static String getTLSFile(String name) {
+        return String.format("./src/test/resources/authentication/tls-http/%s.pem", name);
+    }
+
     @BeforeMethod
     @Override
     public void setup() throws Exception {
         conf.setLoadBalancerEnabled(true);
         conf.setBrokerServicePortTls(Optional.of(0));
         conf.setWebServicePortTls(Optional.of(0));
-        conf.setTlsCertificateFilePath(BROKER_CERT_FILE_PATH);
-        conf.setTlsKeyFilePath(BROKER_KEY_FILE_PATH);
-        conf.setTlsTrustCertsFilePath(CA_CERT_FILE_PATH);
+        conf.setTlsCertificateFilePath(getTLSFile("broker.cert"));
+        conf.setTlsKeyFilePath(getTLSFile("broker.key-pk8"));
+        conf.setTlsTrustCertsFilePath(getTLSFile("ca.cert"));
         conf.setAuthenticationEnabled(true);
         conf.setAuthenticationProviders(
-                Set.of("org.apache.pulsar.broker.authentication.AuthenticationProviderTls"));
-        conf.setSuperUserRoles(Set.of("admin", "superproxy"));
-        conf.setProxyRoles(Set.of("proxy", "superproxy"));
+                ImmutableSet.of("org.apache.pulsar.broker.authentication.AuthenticationProviderTls"));
+        conf.setSuperUserRoles(ImmutableSet.of("admin", "superproxy"));
+        conf.setProxyRoles(ImmutableSet.of("proxy", "superproxy"));
         conf.setAuthorizationEnabled(true);
 
         conf.setBrokerClientAuthenticationPlugin("org.apache.pulsar.client.impl.auth.AuthenticationTls");
         conf.setBrokerClientAuthenticationParameters(
-                String.format("tlsCertFile:%s,tlsKeyFile:%s", getTlsFileForClient("admin.cert"), getTlsFileForClient("admin.key-pk8")));
-        conf.setBrokerClientTrustCertsFilePath(CA_CERT_FILE_PATH);
+                String.format("tlsCertFile:%s,tlsKeyFile:%s", getTLSFile("admin.cert"), getTLSFile("admin.key-pk8")));
+        conf.setBrokerClientTrustCertsFilePath(getTLSFile("ca.cert"));
         conf.setBrokerClientTlsEnabled(true);
         conf.setNumExecutorThreadPoolSize(5);
 
@@ -112,11 +117,11 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
             .register(JacksonConfigurator.class).register(JacksonFeature.class);
 
         X509Certificate trustCertificates[] = SecurityUtility.loadCertificatesFromPemFile(
-                CA_CERT_FILE_PATH);
+                getTLSFile("ca.cert"));
         SSLContext sslCtx = SecurityUtility.createSslContext(
                 false, trustCertificates,
-                SecurityUtility.loadCertificatesFromPemFile(getTlsFileForClient(user + ".cert")),
-                SecurityUtility.loadPrivateKeyFromPemFile(getTlsFileForClient(user + ".key-pk8")));
+                SecurityUtility.loadCertificatesFromPemFile(getTLSFile(user + ".cert")),
+                SecurityUtility.loadPrivateKeyFromPemFile(getTLSFile(user + ".key-pk8")));
         clientBuilder.sslContext(sslCtx).hostnameVerifier(NoopHostnameVerifier.INSTANCE);
         Client client = clientBuilder.build();
 
@@ -130,8 +135,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
             .serviceHttpUrl(brokerUrlTls.toString())
             .authentication("org.apache.pulsar.client.impl.auth.AuthenticationTls",
                             String.format("tlsCertFile:%s,tlsKeyFile:%s",
-                                          getTlsFileForClient(user + ".cert"), getTlsFileForClient(user + ".key-pk8")))
-            .tlsTrustCertsFilePath(CA_CERT_FILE_PATH).build();
+                                          getTLSFile(user + ".cert"), getTLSFile(user + ".key-pk8")))
+            .tlsTrustCertsFilePath(getTLSFile("ca.cert")).build();
     }
 
     PulsarClient buildClient(String user) throws Exception {
@@ -140,17 +145,17 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
             .enableTlsHostnameVerification(false)
             .authentication("org.apache.pulsar.client.impl.auth.AuthenticationTls",
                             String.format("tlsCertFile:%s,tlsKeyFile:%s",
-                                          getTlsFileForClient(user + ".cert"), getTlsFileForClient(user + ".key-pk8")))
-            .tlsTrustCertsFilePath(CA_CERT_FILE_PATH).build();
+                                          getTLSFile(user + ".cert"), getTLSFile(user + ".key-pk8")))
+            .tlsTrustCertsFilePath(getTLSFile("ca.cert")).build();
     }
 
     @Test
     public void testSuperUserCanListTenants() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("foobar"),
-                                                        Set.of("test")));
-            Assert.assertEquals(Set.of("tenant1"), admin.tenants().getTenants());
+                                         new TenantInfoImpl(ImmutableSet.of("foobar"),
+                                                        ImmutableSet.of("test")));
+            Assert.assertEquals(ImmutableSet.of("tenant1"), admin.tenants().getTenants());
         }
     }
 
@@ -158,8 +163,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testProxyRoleCantListTenants() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("foobar"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("foobar"),
+                                                        ImmutableSet.of("test")));
         }
         try (PulsarAdmin admin = buildAdminClient("proxy")) {
             admin.tenants().getTenants();
@@ -175,7 +180,7 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
             admin.resourcegroups().createResourceGroup("test-resource-group",
                     new ResourceGroup());
             admin.resourcegroups().getResourceGroup("test-resource-group");
-            Assert.assertEquals(Set.of("test-resource-group"),
+            Assert.assertEquals(ImmutableSet.of("test-resource-group"),
                             admin.resourcegroups().getResourceGroups());
             admin.resourcegroups().getResourceGroup("test-resource-group");
         }
@@ -188,25 +193,6 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
                     new ResourceGroup());
             admin.resourcegroups().deleteResourceGroup("test-resource-group");
         }
-    }
-
-    @Test
-    public void testSuperUserCanUpdateScaleOfTransactionCoordinators() throws Exception {
-        getPulsar().getConfiguration().setTransactionCoordinatorEnabled(true);
-        pulsar.getPulsarResources()
-                .getNamespaceResources()
-                .getPartitionedTopicResources()
-                .createPartitionedTopic(SystemTopicNames.TRANSACTION_COORDINATOR_ASSIGN,
-                        new PartitionedTopicMetadata(3));
-        @Cleanup
-        PulsarAdmin admin = buildAdminClient("admin");
-        admin.transactions().scaleTransactionCoordinators(4);
-        int partitions = pulsar.getPulsarResources()
-                .getNamespaceResources()
-                .getPartitionedTopicResources()
-                .getPartitionedTopicMetadataAsync(SystemTopicNames.TRANSACTION_COORDINATOR_ASSIGN)
-                .get().get().partitions;
-        Assert.assertEquals(partitions, 4);
     }
 
     @Test
@@ -258,8 +244,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testProxyRoleCantListNamespacesEvenWithAccess() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("proxy"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("proxy"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         try (PulsarAdmin admin = buildAdminClient("proxy")) {
@@ -274,12 +260,12 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testAuthorizedUserAsOriginalPrincipal() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("proxy", "user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("proxy", "user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("proxy");
-        Assert.assertEquals(Set.of("tenant1/ns1"),
+        Assert.assertEquals(ImmutableSet.of("tenant1/ns1"),
                             root.path("/admin/v2/namespaces").path("tenant1")
                             .request(MediaType.APPLICATION_JSON)
                             .header("X-Original-Principal", "user1")
@@ -290,8 +276,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testUnauthorizedUserAsOriginalPrincipal() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("proxy", "user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("proxy", "user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("proxy");
@@ -310,8 +296,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testAuthorizedUserAsOriginalPrincipalButProxyNotAuthorized() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("proxy");
@@ -330,12 +316,12 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testAuthorizedUserAsOriginalPrincipalProxyIsSuperUser() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("superproxy");
-        Assert.assertEquals(Set.of("tenant1/ns1"),
+        Assert.assertEquals(ImmutableSet.of("tenant1/ns1"),
                             root.path("/admin/v2/namespaces").path("tenant1")
                             .request(MediaType.APPLICATION_JSON)
                             .header("X-Original-Principal", "user1")
@@ -346,8 +332,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testUnauthorizedUserAsOriginalPrincipalProxyIsSuperUser() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("superproxy");
@@ -366,8 +352,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testProxyUserViaProxy() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("proxy"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("proxy"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("superproxy");
@@ -386,11 +372,11 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testSuperProxyUserAndAdminCanListTenants() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("user1"),
+                                                        ImmutableSet.of("test")));
         }
         WebTarget root = buildWebClient("superproxy");
-        Assert.assertEquals(Set.of("tenant1"),
+        Assert.assertEquals(ImmutableSet.of("tenant1"),
                             root.path("/admin/v2/tenants")
                             .request(MediaType.APPLICATION_JSON)
                             .header("X-Original-Principal", "admin")
@@ -401,8 +387,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testSuperProxyUserAndNonAdminCannotListTenants() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("proxy"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("proxy"),
+                                                        ImmutableSet.of("test")));
         }
         WebTarget root = buildWebClient("superproxy");
         try {
@@ -420,8 +406,8 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testProxyCannotSetOriginalPrincipalAsEmpty() throws Exception {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient("proxy");
@@ -442,10 +428,10 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
         try (PulsarAdmin admin = buildAdminClient("admin")) {
             log.info("Creating tenant");
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("admin"), Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("admin"), ImmutableSet.of("test")));
             log.info("Creating namespace, and granting perms to user1");
-            admin.namespaces().createNamespace("tenant1/ns1", Set.of("test"));
-            admin.namespaces().grantPermissionOnNamespace("tenant1/ns1", "user1", Set.of(AuthAction.produce));
+            admin.namespaces().createNamespace("tenant1/ns1", ImmutableSet.of("test"));
+            admin.namespaces().grantPermissionOnNamespace("tenant1/ns1", "user1", ImmutableSet.of(AuthAction.produce));
 
             log.info("user1 produces some messages");
             try (PulsarClient client = buildClient("user1");
@@ -457,7 +443,7 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
             admin.topics().delete("tenant1/ns1/foobar", true);
 
             log.info("Deleting namespace");
-            deleteNamespaceWithRetry("tenant1/ns1", false, admin);
+            admin.namespaces().deleteNamespace("tenant1/ns1");
         }
     }
 
@@ -469,25 +455,24 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
     public void testCertRefreshForPulsarAdmin() throws Exception {
         String adminUser = "admin";
         String user2 = "user1";
-        File keyFile = File.createTempFile("temp", ".key-pk8");
+        File keyFile = new File(getTLSFile("temp" + ".key-pk8"));
         Path keyFilePath = Paths.get(keyFile.getAbsolutePath());
         int autoCertRefreshTimeSec = 1;
         try {
-            Files.copy(Paths.get(getTlsFileForClient(user2 + ".key-pk8")), keyFilePath, StandardCopyOption.REPLACE_EXISTING);
-            @Cleanup
+            Files.copy(Paths.get(getTLSFile(user2 + ".key-pk8")), keyFilePath, StandardCopyOption.REPLACE_EXISTING);
             PulsarAdmin admin = PulsarAdmin.builder()
                     .allowTlsInsecureConnection(false)
                     .enableTlsHostnameVerification(false)
                     .serviceHttpUrl(brokerUrlTls.toString())
-                    .autoCertRefreshTime(autoCertRefreshTimeSec, TimeUnit.SECONDS)
+                    .autoCertRefreshTime(1, TimeUnit.SECONDS)
                     .authentication("org.apache.pulsar.client.impl.auth.AuthenticationTls",
                                     String.format("tlsCertFile:%s,tlsKeyFile:%s",
-                                                  getTlsFileForClient(adminUser + ".cert"), keyFile))
-                    .tlsTrustCertsFilePath(CA_CERT_FILE_PATH).build();
+                                                  getTLSFile(adminUser + ".cert"), keyFile))
+                    .tlsTrustCertsFilePath(getTLSFile("ca.cert")).build();
             // try to call admin-api which should fail due to incorrect key-cert
             try {
                 admin.tenants().createTenant("tenantX",
-                        new TenantInfoImpl(Set.of("foobar"), Set.of("test")));
+                        new TenantInfoImpl(ImmutableSet.of("foobar"), ImmutableSet.of("test")));
                 Assert.fail("should have failed due to invalid key file");
             } catch (Exception e) {
                 //OK
@@ -495,12 +480,12 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
             // replace correct key file
             Files.delete(keyFile.toPath());
             Thread.sleep(2 * autoCertRefreshTimeSec * 1000);
-            Files.copy(Paths.get(getTlsFileForClient(adminUser + ".key-pk8")), keyFilePath);
+            Files.copy(Paths.get(getTLSFile(adminUser + ".key-pk8")), keyFilePath);
             MutableBoolean success = new MutableBoolean(false);
             retryStrategically((test) -> {
                 try {
                     admin.tenants().createTenant("tenantX",
-                            new TenantInfoImpl(Set.of("foobar"), Set.of("test")));
+                            new TenantInfoImpl(ImmutableSet.of("foobar"), ImmutableSet.of("test")));
                     success.setValue(true);
                     return true;
                 }catch(Exception e) {
@@ -508,8 +493,9 @@ public class AdminApiTlsAuthTest extends MockedPulsarServiceBaseTest {
                 }
             }, 5, 1000);
             Assert.assertTrue(success.booleanValue());
-            Assert.assertEquals(Set.of("tenantX"), admin.tenants().getTenants());
-        } finally {
+            Assert.assertEquals(ImmutableSet.of("tenantX"), admin.tenants().getTenants());
+            admin.close();
+        }finally {
             Files.delete(keyFile.toPath());
         }
     }
