@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -20,34 +20,32 @@ package org.apache.pulsar.client.impl;
 
 import static org.apache.pulsar.client.impl.auth.AuthenticationKeyStoreTls.mapToString;
 import static org.testng.AssertJUnit.fail;
+
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
-import io.jsonwebtoken.SignatureAlgorithm;
+
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Properties;
 import java.util.Set;
-import javax.crypto.SecretKey;
+
 import javax.net.ssl.SSLContext;
 import javax.ws.rs.client.Client;
 import javax.ws.rs.client.ClientBuilder;
 import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.MediaType;
-import lombok.Cleanup;
+
 import lombok.extern.slf4j.Slf4j;
+
 import org.apache.pulsar.broker.authentication.AuthenticationProviderTls;
-import org.apache.pulsar.broker.authentication.AuthenticationProviderToken;
-import org.apache.pulsar.broker.authentication.utils.AuthTokenUtils;
 import org.apache.pulsar.client.admin.PulsarAdmin;
 import org.apache.pulsar.client.admin.PulsarAdminException;
 import org.apache.pulsar.client.admin.internal.JacksonConfigurator;
-import org.apache.pulsar.client.api.Authentication;
 import org.apache.pulsar.client.api.ProducerConsumerBase;
 import org.apache.pulsar.client.impl.auth.AuthenticationKeyStoreTls;
-import org.apache.pulsar.client.impl.auth.AuthenticationToken;
 import org.apache.pulsar.common.policies.data.ClusterData;
 import org.apache.pulsar.common.policies.data.TenantInfoImpl;
 import org.apache.pulsar.common.util.keystoretls.KeyStoreSSLContext;
@@ -58,16 +56,37 @@ import org.glassfish.jersey.media.multipart.MultiPartFeature;
 import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
-import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 @Slf4j
 @Test(groups = "broker-impl")
 public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
+
+    protected final String BROKER_KEYSTORE_FILE_PATH =
+            "./src/test/resources/authentication/keystoretls/broker.keystore.jks";
+    protected final String BROKER_TRUSTSTORE_FILE_PATH =
+            "./src/test/resources/authentication/keystoretls/broker.truststore.jks";
+    protected final String BROKER_KEYSTORE_PW = "111111";
+    protected final String BROKER_TRUSTSTORE_PW = "111111";
+
+    protected final String CLIENT_KEYSTORE_FILE_PATH =
+            "./src/test/resources/authentication/keystoretls/client.keystore.jks";
+    protected final String CLIENT_TRUSTSTORE_FILE_PATH =
+            "./src/test/resources/authentication/keystoretls/client.truststore.jks";
+    protected final String PROXY_KEYSTORE_FILE_PATH =
+            "./src/test/resources/authentication/keystoretls/proxy.keystore.jks";
+    protected final String PROXY_AND_CLIENT_TRUSTSTORE_FILE_PATH =
+            "./src/test/resources/authentication/keystoretls/proxy-and-client.truststore.jks";
+    protected final String CLIENT_KEYSTORE_PW = "111111";
+    protected final String CLIENT_TRUSTSTORE_PW = "111111";
+    protected final String PROXY_KEYSTORE_PW = "111111";
+    protected final String PROXY_AND_CLIENT_TRUSTSTORE_PW = "111111";
+
+    protected final String CLIENT_KEYSTORE_CN = "clientuser";
+    protected final String KEYSTORE_TYPE = "JKS";
+
     private final String clusterName = "test";
     Set<String> tlsProtocols = Sets.newConcurrentHashSet();
-    private final SecretKey SECRET_KEY = AuthTokenUtils.createSecretKey(SignatureAlgorithm.HS256);
-    private final String CLIENTUSER_TOKEN = AuthTokenUtils.createToken(SECRET_KEY, "clientuser", Optional.empty());
 
     @BeforeMethod
     @Override
@@ -98,12 +117,7 @@ public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
         conf.setAuthorizationEnabled(true);
         Set<String> providers = new HashSet<>();
         providers.add(AuthenticationProviderTls.class.getName());
-        providers.add(AuthenticationProviderToken.class.getName());
         conf.setAuthenticationProviders(providers);
-
-        Properties properties = new Properties();
-        properties.setProperty("tokenSecretKey", AuthTokenUtils.encodeKeyBase64(SECRET_KEY));
-        conf.setProperties(properties);
 
         conf.setBrokerClientTlsEnabled(true);
         conf.setBrokerClientTlsEnabledWithKeyStore(true);
@@ -171,9 +185,9 @@ public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
         try (PulsarAdmin admin = buildAdminClient()) {
             admin.clusters().createCluster("test", ClusterData.builder().serviceUrl(brokerUrl.toString()).build());
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("foobar"),
-                                                        Set.of("test")));
-            Assert.assertEquals(Set.of("tenant1"), admin.tenants().getTenants());
+                                         new TenantInfoImpl(ImmutableSet.of("foobar"),
+                                                        ImmutableSet.of("test")));
+            Assert.assertEquals(ImmutableSet.of("tenant1"), admin.tenants().getTenants());
         }
     }
 
@@ -182,8 +196,8 @@ public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
         try (PulsarAdmin admin = buildAdminClient()) {
             admin.clusters().createCluster("test", ClusterData.builder().serviceUrl(brokerUrl.toString()).build());
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of(""),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of(""),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
             Assert.assertTrue(admin.namespaces().getNamespaces("tenant1").contains("tenant1/ns1"));
         }
@@ -194,12 +208,12 @@ public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
         try (PulsarAdmin admin = buildAdminClient()) {
             admin.clusters().createCluster("test", ClusterData.builder().serviceUrl(brokerUrl.toString()).build());
             admin.tenants().createTenant("tenant1",
-                                         new TenantInfoImpl(Set.of("proxy", "user1"),
-                                                        Set.of("test")));
+                                         new TenantInfoImpl(ImmutableSet.of("proxy", "user1"),
+                                                        ImmutableSet.of("test")));
             admin.namespaces().createNamespace("tenant1/ns1");
         }
         WebTarget root = buildWebClient();
-        Assert.assertEquals(Set.of("tenant1/ns1"),
+        Assert.assertEquals(ImmutableSet.of("tenant1/ns1"),
                             root.path("/admin/v2/namespaces").path("tenant1")
                             .request(MediaType.APPLICATION_JSON)
                             .header("X-Original-Principal", "user1")
@@ -213,9 +227,9 @@ public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
         try (PulsarAdmin admin = buildAdminClient()) {
             admin.clusters().createCluster("test", ClusterData.builder().serviceUrl(brokerUrl.toString()).build());
             admin.tenants().createTenant("tenant1",
-                    new TenantInfoImpl(Set.of("foobar"),
-                            Set.of("test")));
-            Assert.assertEquals(Set.of("tenant1"), admin.tenants().getTenants());
+                    new TenantInfoImpl(ImmutableSet.of("foobar"),
+                            ImmutableSet.of("test")));
+            Assert.assertEquals(ImmutableSet.of("tenant1"), admin.tenants().getTenants());
 
             admin.namespaces().createNamespace("tenant1/ns1");
 
@@ -225,40 +239,5 @@ public class AdminApiKeyStoreTlsAuthTest extends ProducerConsumerBase {
             ex.printStackTrace();
             fail("Should not have thrown an exception");
         }
-    }
-
-    private final Authentication tlsAuth =
-            new AuthenticationKeyStoreTls(KEYSTORE_TYPE, CLIENT_KEYSTORE_FILE_PATH, CLIENT_KEYSTORE_PW);
-    private final Authentication tokenAuth = new AuthenticationToken(CLIENTUSER_TOKEN);
-
-    @DataProvider
-    public Object[] keyStoreTlsTransportWithAuth() {
-        return new Object[]{
-                // Verify JKS TLS transport encryption with TLS authentication
-                tlsAuth,
-                null,
-                // Verify JKS TLS transport encryption with token authentication
-                tokenAuth,
-        };
-    }
-
-    @Test(dataProvider = "keyStoreTlsTransportWithAuth")
-    public void testKeyStoreTlsTransportWithAuth(Authentication auth) throws Exception {
-        @Cleanup
-        PulsarAdmin admin = PulsarAdmin.builder()
-                .serviceHttpUrl(brokerUrlTls.toString())
-                .useKeyStoreTls(true)
-                .tlsTrustStorePath(BROKER_TRUSTSTORE_FILE_PATH)
-                .tlsTrustStorePassword(BROKER_TRUSTSTORE_PW)
-                .tlsKeyStorePath(CLIENT_KEYSTORE_FILE_PATH)
-                .tlsKeyStorePassword(CLIENT_KEYSTORE_PW)
-                .authentication(auth)
-                .allowTlsInsecureConnection(false)
-                .build();
-
-        admin.clusters().createCluster("test", ClusterData.builder().serviceUrl(brokerUrl.toString()).build());
-        admin.tenants().createTenant("tenant1",
-                new TenantInfoImpl(Set.of("foobar"),
-                        Set.of("test")));
     }
 }
