@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -19,33 +19,36 @@
 package org.apache.pulsar.client.impl;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyObject;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.fail;
-import io.netty.channel.ChannelHandlerContext;
-import io.netty.util.concurrent.EventExecutor;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.CompletableFuture;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import io.netty.channel.Channel;
+import io.netty.channel.ChannelHandlerContext;
+import io.netty.channel.DefaultEventLoop;
+import io.netty.util.concurrent.EventExecutor;
 import lombok.Cleanup;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.bookkeeper.mledger.Position;
 import org.apache.bookkeeper.mledger.impl.ManagedLedgerImpl;
+import org.apache.bookkeeper.mledger.impl.PositionImpl;
 import org.apache.pulsar.broker.TransactionMetadataStoreService;
 import org.apache.pulsar.broker.service.BrokerService;
 import org.apache.pulsar.broker.service.Topic;
@@ -73,13 +76,14 @@ import org.apache.pulsar.client.util.RetryMessageUtil;
 import org.apache.pulsar.common.api.proto.CommandAck;
 import org.apache.pulsar.common.naming.TopicName;
 import org.apache.pulsar.common.policies.data.PersistentTopicInternalStats;
+import org.apache.pulsar.common.util.collections.ConcurrentOpenHashMap;
 import org.apache.pulsar.transaction.coordinator.TransactionCoordinatorID;
 import org.apache.pulsar.transaction.coordinator.TransactionMetadataStore;
 import org.apache.pulsar.transaction.coordinator.TransactionSubscription;
 import org.awaitility.Awaitility;
 import org.testng.Assert;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
@@ -87,30 +91,21 @@ import org.testng.annotations.Test;
  * End to end transaction test.
  */
 @Slf4j
-@Test(groups = "broker-impl")
+@Test(groups = "flaky")
 public class TransactionEndToEndTest extends TransactionTestBase {
 
     protected static final int TOPIC_PARTITION = 3;
     protected static final String TOPIC_OUTPUT = NAMESPACE1 + "/output";
     protected static final String TOPIC_MESSAGE_ACK_TEST = NAMESPACE1 + "/message-ack-test";
     protected static final int NUM_PARTITIONS = 16;
-    private static final int waitTimeForCanReceiveMsgInSec = 5;
-    private static final int waitTimeForCannotReceiveMsgInSec = 5;
-    @BeforeClass(alwaysRun = true)
+    @BeforeMethod
     protected void setup() throws Exception {
         conf.setAcknowledgmentAtBatchIndexLevelEnabled(true);
         setUpBase(1, NUM_PARTITIONS, TOPIC_OUTPUT, TOPIC_PARTITION);
         admin.topics().createPartitionedTopic(TOPIC_MESSAGE_ACK_TEST, 1);
     }
 
-    protected void resetTopicOutput() throws Exception {
-        admin.topics().deletePartitionedTopic(TOPIC_OUTPUT, true);
-        admin.topics().createPartitionedTopic(TOPIC_OUTPUT, TOPIC_PARTITION);
-        admin.topics().deletePartitionedTopic(TOPIC_MESSAGE_ACK_TEST, true);
-        admin.topics().createPartitionedTopic(TOPIC_MESSAGE_ACK_TEST, 1);
-    }
-
-    @AfterClass(alwaysRun = true)
+    @AfterMethod(alwaysRun = true)
     protected void cleanup() {
         super.internalCleanup();
     }
@@ -173,7 +168,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
 
         // can't receive message anymore
-        assertNull(consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS));
+        assertNull(consumer.receive(2, TimeUnit.SECONDS));
     }
 
 
@@ -240,77 +235,18 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 .enableBatchIndexAcknowledgment(true)
                 .subscribe();
 
-        Message<Integer> message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<Integer> message = consumer.receive(3, TimeUnit.SECONDS);
         Assert.assertNull(message);
 
         // abort txn1
         txn1.abort().get();
         // after txn1 aborted, consumer will receive messages txn1 contains
         int receiveCounter = 0;
-        while((message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS)) != null) {
+        while((message = consumer.receive(3, TimeUnit.SECONDS)) != null) {
             Assert.assertEquals(message.getValue().intValue(), receiveCounter);
             receiveCounter ++;
         }
         Assert.assertEquals(receiveCounter, count / 2);
-    }
-
-    @Test
-    private void testMsgsInPendingAckStateWouldNotGetTheConsumerStuck() throws Exception {
-        final String topicName = NAMESPACE1 + "/testMsgsInPendingAckStateWouldNotGetTheConsumerStuck";
-        final String subscription = "test";
-
-        @Cleanup
-        Producer<Integer> producer = pulsarClient.newProducer(Schema.INT32)
-                .topic(topicName)
-                .create();
-        @Cleanup
-        Consumer<Integer> consumer = pulsarClient.newConsumer(Schema.INT32)
-                .topic(topicName)
-                .subscriptionName(subscription)
-                .subscriptionType(SubscriptionType.Shared)
-                .subscriptionInitialPosition(SubscriptionInitialPosition.Earliest)
-                .subscribe();
-
-        int numStep1Receive = 2, numStep2Receive = 2, numStep3Receive = 2;
-        int numTotalMessage = numStep1Receive + numStep2Receive + numStep3Receive;
-
-        for (int i = 0; i < numTotalMessage; i++) {
-            producer.send(i);
-        }
-
-        Transaction step1Txn = getTxn();
-        Transaction step2Txn = getTxn();
-
-        // Step 1, try to consume some messages but do not commit the transaction
-        for (int i = 0; i < numStep1Receive; i++) {
-            consumer.acknowledgeAsync(consumer.receive().getMessageId(), step1Txn).get();
-        }
-
-        // Step 2, try to consume some messages and commit the transaction
-        for (int i = 0; i < numStep2Receive; i++) {
-            consumer.acknowledgeAsync(consumer.receive().getMessageId(), step2Txn).get();
-        }
-
-        // commit step2Txn
-        step2Txn.commit().get();
-
-        // close and re-create consumer
-        consumer.close();
-        @Cleanup
-        Consumer<Integer> consumer2 = pulsarClient.newConsumer(Schema.INT32)
-                .topic(topicName)
-                .receiverQueueSize(numStep3Receive)
-                .subscriptionName(subscription)
-                .subscriptionType(SubscriptionType.Shared)
-                .subscriptionInitialPosition(SubscriptionInitialPosition.Earliest)
-                .subscribe();
-
-        // Step 3, try to consume the rest messages and should receive all of them
-        for (int i = 0; i < numStep3Receive; i++) {
-            // should get the message instead of timeout
-            Message<Integer> msg = consumer2.receive(3, TimeUnit.SECONDS);
-            Assert.assertEquals(msg.getValue(), numStep1Receive + numStep2Receive + i);
-        }
     }
 
     @Test(dataProvider="enableBatch")
@@ -347,7 +283,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
 
         // Can't receive transaction messages before commit.
-        Message<byte[]> message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<byte[]> message = consumer.receive(5, TimeUnit.SECONDS);
         Assert.assertNull(message);
 
         txn1.commit().get();
@@ -355,19 +291,18 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
         int receiveCnt = 0;
         for (int i = 0; i < txnMessageCnt; i++) {
-            message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive();
             Assert.assertNotNull(message);
             receiveCnt ++;
         }
         Assert.assertEquals(txnMessageCnt, receiveCnt);
 
-        message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        message = consumer.receive(5, TimeUnit.SECONDS);
         Assert.assertNull(message);
 
-        // cleanup.
-        producer.close();
-        consumer.close();
-        resetTopicOutput();
+        message = consumer.receive(5, TimeUnit.SECONDS);
+        Assert.assertNull(message);
+
         log.info("message commit test enableBatch {}", enableBatch);
     }
 
@@ -376,6 +311,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         Transaction txn = getTxn();
         String subName = "test";
 
+        @Cleanup
         Producer<byte[]> producer = pulsarClient
                 .newProducer()
                 .topic(TOPIC_OUTPUT)
@@ -388,6 +324,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             producer.newMessage(txn).value(("Hello Txn - " + i).getBytes(UTF_8)).send();
         }
 
+        @Cleanup
         Consumer<byte[]> consumer = pulsarClient
                 .newConsumer()
                 .topic(TOPIC_OUTPUT)
@@ -398,13 +335,13 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         Awaitility.await().until(consumer::isConnected);
 
         // Can't receive transaction messages before abort.
-        Message<byte[]> message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<byte[]> message = consumer.receive(2, TimeUnit.SECONDS);
         Assert.assertNull(message);
 
         txn.abort().get();
 
         // Cant't receive transaction messages after abort.
-        message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        message = consumer.receive(2, TimeUnit.SECONDS);
         Assert.assertNull(message);
         Awaitility.await().until(() -> {
             boolean flag = true;
@@ -414,7 +351,11 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 boolean exist = false;
                 for (int i = 0; i < getPulsarServiceList().size(); i++) {
 
-                    final var topics = getPulsarServiceList().get(i).getBrokerService().getTopics();
+                    Field field = BrokerService.class.getDeclaredField("topics");
+                    field.setAccessible(true);
+                    ConcurrentOpenHashMap<String, CompletableFuture<Optional<Topic>>> topics =
+                            (ConcurrentOpenHashMap<String, CompletableFuture<Optional<Topic>>>) field
+                                    .get(getPulsarServiceList().get(i).getBrokerService());
                     CompletableFuture<Optional<Topic>> topicFuture = topics.get(topic);
 
                     if (topicFuture != null) {
@@ -433,7 +374,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                                 //when delete commit marker operation finish, it can run next delete commit marker operation
                                 //so this test may not delete all the position in this manageLedger.
                                 Position markerPosition = ((ManagedLedgerImpl) persistentSubscription.getCursor()
-                                        .getManagedLedger()).getNextValidPosition(markDeletePosition);
+                                        .getManagedLedger()).getNextValidPosition((PositionImpl) markDeletePosition);
                                 //marker is the lastConfirmedEntry, after commit the marker will only be write in
                                 if (!markerPosition.equals(lastConfirmedEntry)) {
                                     log.error("Mark delete position is not commit marker position!");
@@ -448,10 +389,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             return flag;
         });
 
-        // cleanup.
-        producer.close();
-        consumer.close();
-        resetTopicOutput();
         log.info("finished test partitionAbortTest");
     }
 
@@ -488,7 +425,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         Transaction txn = getTxn();
 
         for (int i = 0; i < messageCount / 2; i++) {
-            Message<byte[]> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            Message<byte[]> message = consumer.receive();
             consumer.acknowledgeAsync(message.getMessageId(), txn).get();
         }
 
@@ -510,11 +447,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             }
         }
         assertTrue(flag);
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topicName, true);
     }
 
     @Test
@@ -568,14 +500,14 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
             // consume and ack messages with txn
             for (int i = 0; i < messageCnt; i++) {
-                Message<byte[]> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+                Message<byte[]> message = consumer.receive();
                 Assert.assertNotNull(message);
                 log.info("receive msgId: {}, count : {}", message.getMessageId(), i);
                 consumer.acknowledgeAsync(message.getMessageId(), txn).get();
             }
 
             // the messages are pending ack state and can't be received
-            Message<byte[]> message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+            Message<byte[]> message = consumer.receive(2, TimeUnit.SECONDS);
             Assert.assertNull(message);
 
             // 1) txn abort
@@ -584,7 +516,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             // after transaction abort, the messages could be received
             Transaction commitTxn = getTxn();
             for (int i = 0; i < messageCnt; i++) {
-                message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+                message = consumer.receive(2, TimeUnit.SECONDS);
                 Assert.assertNotNull(message);
                 consumer.acknowledgeAsync(message.getMessageId(), commitTxn).get();
                 log.info("receive msgId: {}, count: {}", message.getMessageId(), i);
@@ -594,7 +526,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             commitTxn.commit().get();
 
             // after transaction commit, the messages can't be received
-            message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive(2, TimeUnit.SECONDS);
             Assert.assertNull(message);
 
             Field field = TransactionImpl.class.getDeclaredField("state");
@@ -610,11 +542,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 Assert.assertTrue(reCommitError.getCause() instanceof TransactionNotFoundException);
             }
         }
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(normalTopic, true);
     }
 
     @Test
@@ -631,12 +558,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 .topic(topicTwo).subscriptionName(sub).subscribe();
         String content = "test";
         producer.send(content);
-        assertEquals(consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getValue(), content);
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topicTwo, true);
+        assertEquals(consumer.receive().getValue(), content);
     }
 
     @Test
@@ -670,7 +592,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         log.info("produce transaction messages finished");
 
         // Can't receive transaction messages before commit.
-        Message<byte[]> message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<byte[]> message = consumer.receive(2, TimeUnit.SECONDS);
         Assert.assertNull(message);
         log.info("transaction messages can't be received before transaction committed");
 
@@ -679,7 +601,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         int ackedMessageCount = 0;
         int receiveCnt = 0;
         for (int i = 0; i < messageCnt; i++) {
-            message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive();
             Assert.assertNotNull(message);
             receiveCnt ++;
             if (i % 2 == 0) {
@@ -689,7 +611,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
         Assert.assertEquals(messageCnt, receiveCnt);
 
-        message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        message = consumer.receive(2, TimeUnit.SECONDS);
         Assert.assertNull(message);
 
         String checkTopic = TopicName.get(topic).getPartition(0).toString();
@@ -701,14 +623,14 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
         receiveCnt = 0;
         for (int i = 0; i < messageCnt - ackedMessageCount; i++) {
-            message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive(2, TimeUnit.SECONDS);
             Assert.assertNotNull(message);
             consumer.acknowledge(message);
             receiveCnt ++;
         }
         Assert.assertEquals(messageCnt - ackedMessageCount, receiveCnt);
 
-        message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        message = consumer.receive(2, TimeUnit.SECONDS);
         Assert.assertNull(message);
 
         topic = TopicName.get(topic).getPartition(0).toString();
@@ -717,7 +639,9 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
             Field field = BrokerService.class.getDeclaredField("topics");
             field.setAccessible(true);
-            final var topics = getPulsarServiceList().get(i).getBrokerService().getTopics();
+            ConcurrentOpenHashMap<String, CompletableFuture<Optional<Topic>>> topics =
+                    (ConcurrentOpenHashMap<String, CompletableFuture<Optional<Topic>>>) field
+                            .get(getPulsarServiceList().get(i).getBrokerService());
             CompletableFuture<Optional<Topic>> topicFuture = topics.get(topic);
 
             if (topicFuture != null) {
@@ -736,7 +660,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                         //when delete commit marker operation finish, it can run next delete commit marker operation
                         //so this test may not delete all the position in this manageLedger.
                         Position markerPosition = ((ManagedLedgerImpl) persistentSubscription.getCursor()
-                                .getManagedLedger()).getNextValidPosition(markDeletePosition);
+                                .getManagedLedger()).getNextValidPosition((PositionImpl) markDeletePosition);
                         //marker is the lastConfirmedEntry, after commit the marker will only be write in
                         if (!markerPosition.equals(lastConfirmedEntry)) {
                             log.error("Mark delete position is not commit marker position!");
@@ -748,10 +672,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
         assertTrue(exist);
 
-        // cleanup.
-        producer.close();
-        consumer.close();
-        resetTopicOutput();
         log.info("receive transaction messages count: {}", receiveCnt);
     }
 
@@ -797,7 +717,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             Message<byte[]> message = null;
             Thread.sleep(1000L);
             for (int i = 0; i < messageCnt; i++) {
-                message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+                message = consumer.receive(1, TimeUnit.SECONDS);
                 Assert.assertNotNull(message);
                 if (i % 3 == 0) {
                     consumer.acknowledgeCumulativeAsync(message.getMessageId(), abortTxn).get();
@@ -822,14 +742,13 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             }
 
             // the messages are pending ack state and can't be received
-            message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive(2, TimeUnit.SECONDS);
             Assert.assertNull(message);
 
             abortTxn.abort().get();
-            consumer.redeliverUnacknowledgedMessages();
             Transaction commitTxn = getTxn();
             for (int i = 0; i < messageCnt; i++) {
-                message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+                message = consumer.receive(1, TimeUnit.SECONDS);
                 Assert.assertNotNull(message);
                 if (i % 3 == 0) {
                     consumer.acknowledgeCumulativeAsync(message.getMessageId(), commitTxn).get();
@@ -851,22 +770,36 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 Assert.assertTrue(reCommitError.getCause() instanceof TransactionNotFoundException);
             }
 
-            message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive(1, TimeUnit.SECONDS);
             Assert.assertNull(message);
         }
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(normalTopic, true);
     }
 
     public Transaction getTxn() throws Exception {
         return pulsarClient
                 .newTransaction()
-                .withTransactionTimeout(10, TimeUnit.MINUTES)
+                .withTransactionTimeout(10, TimeUnit.SECONDS)
                 .build()
                 .get();
+    }
+
+    private void markDeletePositionCheck(String topic, String subName, boolean equalsWithLastConfirm) throws Exception {
+        for (int i = 0; i < TOPIC_PARTITION; i++) {
+            PersistentTopicInternalStats stats = null;
+            String checkTopic = TopicName.get(topic).getPartition(i).toString();
+            for (int j = 0; j < 10; j++) {
+                stats = admin.topics().getInternalStats(checkTopic, false);
+                if (stats.lastConfirmedEntry.equals(stats.cursors.get(subName).markDeletePosition)) {
+                    break;
+                }
+                Thread.sleep(200);
+            }
+            if (equalsWithLastConfirm) {
+                Assert.assertEquals(stats.cursors.get(subName).markDeletePosition, stats.lastConfirmedEntry);
+            } else {
+                Assert.assertNotEquals(stats.cursors.get(subName).markDeletePosition, stats.lastConfirmedEntry);
+            }
+        }
     }
 
     @Test
@@ -913,15 +846,9 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         Awaitility.await().until(consumer::isConnected);
 
         for (int i = 0; i < txnCnt * messageCnt; i++) {
-            Message<byte[]> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            Message<byte[]> message = consumer.receive();
             Assert.assertNotNull(message);
         }
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        recoverPulsarClient.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -954,16 +881,11 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             txn.commit().get();
 
             for (int i = 0; i < 1000; i++) {
-                Message<byte[]> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+                Message<byte[]> message = consumer.receive(5, TimeUnit.SECONDS);
                 Assert.assertNotNull(message);
-                Assert.assertEquals(Integer.valueOf(new String(message.getData())), Integer.valueOf(i));
+                Assert.assertEquals(Integer.valueOf(new String(message.getData())), new Integer(i));
             }
         }
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -1010,7 +932,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
 
 
-        Message<byte[]> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<byte[]> message = consumer.receive(5, TimeUnit.SECONDS);
         consumer.acknowledgeAsync(message.getMessageId(), consumeTxn).get();
         consumeTxn.commit().get();
         try {
@@ -1056,7 +978,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         constructor.setAccessible(true);
 
         TransactionImpl timeoutTxnSkipClientTimeout = constructor.newInstance(pulsarClient, 5,
-                timeoutTxn.getTxnID().getLeastSigBits(), timeoutTxn.getTxnID().getMostSigBits());
+                        timeoutTxn.getTxnID().getLeastSigBits(), timeoutTxn.getTxnID().getMostSigBits());
 
         try {
             timeoutTxnSkipClientTimeout.commit().get();
@@ -1068,33 +990,25 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         field.setAccessible(true);
         TransactionImpl.State state = (TransactionImpl.State) field.get(timeoutTxnSkipClientTimeout);
         assertEquals(state, TransactionImpl.State.ERROR);
-
-        // cleanup.
-        timeoutTxn.abort();
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
     public void testTxnTimeoutAtTransactionMetadataStore() throws Exception{
-        Collection<TransactionMetadataStore> transactionMetadataStores =
-                getPulsarServiceList().get(0).getTransactionMetadataStoreService().getStores().values();
-        long timeoutCountOriginal = transactionMetadataStores.stream()
-                .mapToLong(store -> store.getMetadataStoreStats().timeoutCount).sum();
         TxnID txnID = pulsarServiceList.get(0).getTransactionMetadataStoreService()
                 .newTransaction(new TransactionCoordinatorID(0), 1, null).get();
         Awaitility.await().until(() -> {
             try {
-                getPulsarServiceList().get(0).getTransactionMetadataStoreService().getTxnMeta(txnID).get();
+               getPulsarServiceList().get(0).getTransactionMetadataStoreService().getTxnMeta(txnID).get();
                 return false;
             } catch (Exception e) {
                 return true;
             }
         });
+        Collection<TransactionMetadataStore> transactionMetadataStores =
+                getPulsarServiceList().get(0).getTransactionMetadataStoreService().getStores().values();
         long timeoutCount = transactionMetadataStores.stream()
                 .mapToLong(store -> store.getMetadataStoreStats().timeoutCount).sum();
-        Assert.assertEquals(timeoutCount, timeoutCountOriginal + 1);
+        Assert.assertEquals(timeoutCount, 1);
     }
 
     @Test
@@ -1119,27 +1033,22 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
         Transaction consumeTimeoutTxn = pulsarClient
                 .newTransaction()
-                .withTransactionTimeout(7, TimeUnit.SECONDS)
+                .withTransactionTimeout(3, TimeUnit.SECONDS)
                 .build().get();
 
-        Message<String> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<String> message = consumer.receive();
 
         consumer.acknowledgeAsync(message.getMessageId(), consumeTimeoutTxn).get();
 
-        Message<String> reReceiveMessage = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<String> reReceiveMessage = consumer.receive(2, TimeUnit.SECONDS);
         assertNull(reReceiveMessage);
 
-        reReceiveMessage = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+        reReceiveMessage = consumer.receive(2, TimeUnit.SECONDS);
 
         assertEquals(reReceiveMessage.getValue(), message.getValue());
 
         assertEquals(reReceiveMessage.getMessageId(), message.getMessageId());
 
-        // cleanup.
-        consumeTimeoutTxn.abort();
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topic, true);
     }
 
     @DataProvider(name = "ackType")
@@ -1176,9 +1085,9 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
         Transaction txn = getTxn();
         if (ackType == CommandAck.AckType.Individual) {
-            consumer.acknowledgeAsync(consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getMessageId(), txn);
+            consumer.acknowledgeAsync(consumer.receive().getMessageId(), txn);
         } else {
-            consumer.acknowledgeCumulativeAsync(consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getMessageId(), txn);
+            consumer.acknowledgeCumulativeAsync(consumer.receive().getMessageId(), txn);
         }
         topic = TopicName.get(topic).toString();
         boolean exist = false;
@@ -1186,7 +1095,9 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
             Field field = BrokerService.class.getDeclaredField("topics");
             field.setAccessible(true);
-            final var topics = getPulsarServiceList().get(i).getBrokerService().getTopics();
+            ConcurrentOpenHashMap<String, CompletableFuture<Optional<Topic>>> topics =
+                    (ConcurrentOpenHashMap<String, CompletableFuture<Optional<Topic>>>) field
+                            .get(getPulsarServiceList().get(i).getBrokerService());
             CompletableFuture<Optional<Topic>> topicFuture = topics.get(topic);
 
             if (topicFuture != null) {
@@ -1203,11 +1114,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         }
         txn.abort().get();
         assertTrue(exist);
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -1265,13 +1171,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
             }
         }
         assertTrue(flag);
-
-        // cleanup.
-        txn.abort().get();
-        producer.close();
-        consumer1.close();
-        consumer2.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -1299,91 +1198,13 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                     .InvalidTxnStatusException);
         }
         try {
-            Message<String> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            Message<String> message = consumer.receive();
             consumer.acknowledgeAsync(message.getMessageId(), transaction).get();
             Assert.fail();
         } catch (Exception e) {
             Assert.assertTrue(e.getCause() instanceof TransactionCoordinatorClientException
                     .InvalidTxnStatusException);
         }
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topic, true);
-    }
-
-    @Test
-    public void testCumulativeAckRedeliverMessages() throws Exception {
-        String topic = NAMESPACE1 + "/testCumulativeAckRedeliverMessages";
-
-        int count = 5;
-        int transactionCumulativeAck = 3;
-        @Cleanup
-        Consumer<byte[]> consumer = pulsarClient.newConsumer()
-                .topic(topic)
-                .subscriptionName("test")
-                .subscribe();
-
-        @Cleanup
-        Producer<byte[]> producer = pulsarClient.newProducer()
-                .topic(topic)
-                .sendTimeout(0, TimeUnit.SECONDS)
-                .create();
-
-        // send 5 messages
-        for (int i = 0; i < count; i++) {
-            producer.send((i + "").getBytes(UTF_8));
-        }
-
-        Transaction transaction = getTxn();
-        Transaction invalidTransaction = getTxn();
-
-        Message<byte[]> message = null;
-        for (int i = 0; i < transactionCumulativeAck; i++) {
-            message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
-        }
-
-        // receive transaction in order
-        assertEquals(message.getValue(), (transactionCumulativeAck - 1 + "").getBytes(UTF_8));
-
-        // ack the last message
-        consumer.acknowledgeCumulativeAsync(message.getMessageId(), transaction).get();
-
-        // another ack will throw TransactionConflictException
-        try {
-            consumer.acknowledgeCumulativeAsync(message.getMessageId(), invalidTransaction).get();
-            fail();
-        } catch (ExecutionException e) {
-            assertTrue(e.getCause() instanceof PulsarClientException.TransactionConflictException);
-            // abort transaction then redeliver messages
-            transaction.abort().get();
-            // consumer redeliver messages
-            consumer.redeliverUnacknowledgedMessages();
-        }
-
-        // receive the rest of the message
-        for (int i = 0; i < count; i++) {
-            message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
-        }
-
-        Transaction commitTransaction = getTxn();
-
-        // receive the first message
-        assertEquals(message.getValue(), (count - 1 + "").getBytes(UTF_8));
-        // ack the end of the message
-        consumer.acknowledgeCumulativeAsync(message.getMessageId(), commitTransaction).get();
-
-        commitTransaction.commit().get();
-
-        // then redeliver will not receive any message
-        message = consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
-        assertNull(message);
-
-        // cleanup.
-        producer.close();
-        consumer.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -1400,14 +1221,17 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
         // mock cnx, send message can't receive response
         ClientCnx cnx = mock(ClientCnx.class);
+        Channel channel = mock(Channel.class);
+        doReturn(spy(DefaultEventLoop.class)).when(channel).eventLoop();
         ChannelHandlerContext channelHandlerContext = mock(ChannelHandlerContext.class);
+        doReturn(channel).when(channelHandlerContext).channel();
         doReturn(channelHandlerContext).when(cnx).ctx();
         EventExecutor eventExecutor = mock(EventExecutor.class);
         doReturn(eventExecutor).when(channelHandlerContext).executor();
         CompletableFuture<ProducerResponse> completableFuture = new CompletableFuture<>();
         completableFuture.complete(new ProducerResponse("test", 1,
                 "1".getBytes(), Optional.of(30L)));
-        doReturn(completableFuture).when(cnx).sendRequestWithId(any(), anyLong());
+        doReturn(completableFuture).when(cnx).sendRequestWithId(anyObject(), anyLong());
         producer.getConnectionHandler().setClientCnx(cnx);
 
 
@@ -1418,11 +1242,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         } catch (PulsarClientException ex) {
             assertTrue(ex instanceof PulsarClientException.TimeoutException);
         }
-
-        // cleanup.
-        transaction.abort().get();
-        producer.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -1452,7 +1271,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
         // receive the batch messages add to a list
         for (int i = 0; i < 5; i++) {
-            messageIds.add(consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getMessageId());
+            messageIds.add(consumer.receive().getMessageId());
         }
 
         MessageIdImpl messageId = (MessageIdImpl) messageIds.get(0);
@@ -1469,12 +1288,6 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         // ack one message, the unack count is 4
         assertEquals(getPulsarServiceList().get(0).getBrokerService().getTopic(topic, false)
                 .get().get().getSubscription(subName).getConsumers().get(0).getUnackedMessages(), 4);
-
-        // cleanup.
-        txn.abort().get();
-        consumer.close();
-        producer.close();
-        admin.topics().delete(topic, true);
     }
 
     @Test
@@ -1512,7 +1325,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 .build().get();
 
         // consumer receive the message the first time, redeliverCount = 0
-        consumer.acknowledgeAsync(consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getMessageId(), transaction).get();
+        consumer.acknowledgeAsync(consumer.receive().getMessageId(), transaction).get();
 
         transaction.abort().get();
 
@@ -1520,25 +1333,17 @@ public class TransactionEndToEndTest extends TransactionTestBase {
                 .build().get();
 
         // consumer receive the message the second time, redeliverCount = 1, also can be received
-        consumer.acknowledgeAsync(consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getMessageId(), transaction).get();
+        consumer.acknowledgeAsync(consumer.receive().getMessageId(), transaction).get();
 
         transaction.abort().get();
 
         // consumer receive the message the third time, redeliverCount = 2,
         // the message will be sent to DLQ, can't receive
-        assertNull(consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS));
+        assertNull(consumer.receive(3, TimeUnit.SECONDS));
 
         assertEquals(((ConsumerImpl<?>) consumer).getAvailablePermits(), 3);
 
-        assertEquals(value, new String(deadLetterConsumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getValue()));
-
-        // cleanup.
-        consumer.close();
-        deadLetterConsumer.close();
-        producer.close();
-        admin.topics().delete(String.format("%s-%s" + RetryMessageUtil.DLQ_GROUP_TOPIC_SUFFIX,
-                topic, subName), true);
-        admin.topics().delete(topic, true);
+        assertEquals(value, new String(deadLetterConsumer.receive(3, TimeUnit.SECONDS).getValue()));
     }
 
     @Test
@@ -1576,7 +1381,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         Transaction transaction = pulsarClient.newTransaction().withTransactionTimeout(1, TimeUnit.MINUTES)
                 .build().get();
 
-        Message<byte[]> message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<byte[]> message = consumer.receive();
         assertEquals(value1, new String(message.getValue()));
         // consumer receive the batch message one the first time, redeliverCount = 0
         consumer.acknowledgeAsync(message.getMessageId(), transaction).get();
@@ -1586,7 +1391,7 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         // consumer will receive the batch message two and then receive
         // the message one and message two again, redeliverCount = 1
         for (int i = 0; i < 3; i ++) {
-            message = consumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            message = consumer.receive();
         }
 
         transaction = pulsarClient.newTransaction().withTransactionTimeout(5, TimeUnit.MINUTES)
@@ -1600,23 +1405,15 @@ public class TransactionEndToEndTest extends TransactionTestBase {
 
         // consumer receive the batch message the third time, redeliverCount = 2,
         // the message will be sent to DLQ, can't receive
-        assertNull(consumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS));
+        assertNull(consumer.receive(3, TimeUnit.SECONDS));
 
         assertEquals(((ConsumerImpl<?>) consumer).getAvailablePermits(), 6);
 
-        assertEquals(value1, new String(deadLetterConsumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getValue()));
-        assertEquals(value2, new String(deadLetterConsumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS).getValue()));
-
-        // cleanup.
-        consumer.close();
-        deadLetterConsumer.close();
-        producer.close();
-        admin.topics().delete(String.format("%s-%s" + RetryMessageUtil.DLQ_GROUP_TOPIC_SUFFIX,
-                topic, subName), true);
-        admin.topics().delete(topic, true);
+        assertEquals(value1, new String(deadLetterConsumer.receive(3, TimeUnit.SECONDS).getValue()));
+        assertEquals(value2, new String(deadLetterConsumer.receive(3, TimeUnit.SECONDS).getValue()));
     }
 
-    @Test(groups = "flaky")
+    @Test
     public void testDelayedTransactionMessages() throws Exception {
         String topic = NAMESPACE1 + "/testDelayedTransactionMessages";
 
@@ -1645,27 +1442,27 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         for (int i = 0; i < 10; i++) {
             producer.newMessage(transaction)
                     .value("msg-" + i)
-                    .deliverAfter(7, TimeUnit.SECONDS)
+                    .deliverAfter(5, TimeUnit.SECONDS)
                     .sendAsync();
         }
 
         producer.flush();
 
         transaction.commit().get();
-        Message<String> msg;
-        for (int i = 0; i < 10; i++) {
-            msg = failoverConsumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
-            assertEquals(msg.getValue(), "msg-" + i);
-        }
 
         // Failover consumer will receive the messages immediately while
         // the shared consumer will get them after the delay
-        msg = sharedConsumer.receive(waitTimeForCannotReceiveMsgInSec, TimeUnit.SECONDS);
+        Message<String> msg = sharedConsumer.receive(1, TimeUnit.SECONDS);
         assertNull(msg);
+
+        for (int i = 0; i < 10; i++) {
+            msg = failoverConsumer.receive(100, TimeUnit.MILLISECONDS);
+            assertEquals(msg.getValue(), "msg-" + i);
+        }
 
         Set<String> receivedMsgs = new TreeSet<>();
         for (int i = 0; i < 10; i++) {
-            msg = sharedConsumer.receive(waitTimeForCanReceiveMsgInSec, TimeUnit.SECONDS);
+            msg = sharedConsumer.receive(10, TimeUnit.SECONDS);
             receivedMsgs.add(msg.getValue());
         }
 
@@ -1673,11 +1470,5 @@ public class TransactionEndToEndTest extends TransactionTestBase {
         for (int i = 0; i < 10; i++) {
             assertTrue(receivedMsgs.contains("msg-" + i));
         }
-
-        // cleanup.
-        sharedConsumer.close();
-        failoverConsumer.close();
-        producer.close();
-        admin.topics().delete(topic, true);
     }
 }
