@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -29,9 +29,13 @@ import static org.mockito.Mockito.when;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
-import java.io.PrintWriter;
-import java.io.StringWriter;
-import lombok.Cleanup;
+
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.io.PrintStream;
+import java.util.Arrays;
+import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.pulsar.admin.cli.CmdFunctions.CreateFunction;
 import org.apache.pulsar.admin.cli.CmdFunctions.DeleteFunction;
@@ -51,7 +55,6 @@ import org.apache.pulsar.functions.api.Function;
 import org.apache.pulsar.functions.api.utils.IdentityFunction;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
-import picocli.CommandLine;
 
 /**
  * Unit test of {@link CmdFunctions}.
@@ -165,8 +168,7 @@ public class CmdFunctionsTest {
             "--className", DummyFunction.class.getName(),
             "--dead-letter-topic", "test-dead-letter-topic",
             "--custom-runtime-options", "custom-runtime-options",
-            "--user-config", "{\"key\": [\"value1\", \"value2\"]}",
-            "--runtime-flags", "--add-opens java.base/java.lang=ALL-UNNAMED"
+            "--user-config", "{\"key\": [\"value1\", \"value2\"]}"
         });
 
         CreateFunction creater = cmd.getCreater();
@@ -176,7 +178,6 @@ public class CmdFunctionsTest {
         assertEquals(Boolean.FALSE, creater.getAutoAck());
         assertEquals("test-dead-letter-topic", creater.getDeadLetterTopic());
         assertEquals("custom-runtime-options", creater.getCustomRuntimeOptions());
-        assertEquals("--add-opens java.base/java.lang=ALL-UNNAMED", creater.getRuntimeFlags());
 
         verify(functions, times(1)).createFunction(any(FunctionConfig.class), anyString());
 
@@ -541,12 +542,11 @@ public class CmdFunctionsTest {
 
 
     @Test
-    public void testCreateWithoutOutputTopic() throws Exception {
-        @Cleanup
-        StringWriter stringWriter = new StringWriter();
-        @Cleanup
-        PrintWriter printWriter = new PrintWriter(stringWriter);
-        cmd.getCommander().setOut(printWriter);
+    public void testCreateWithoutOutputTopic() {
+
+        ConsoleOutputCapturer consoleOutputCapturer = new ConsoleOutputCapturer();
+        consoleOutputCapturer.start();
+
         cmd.run(new String[] {
                 "create",
                 "--inputs", INPUT_TOPIC_NAME,
@@ -557,8 +557,9 @@ public class CmdFunctionsTest {
         });
 
         CreateFunction creater = cmd.getCreater();
+        consoleOutputCapturer.stop();
         assertNull(creater.getFunctionConfig().getOutput());
-        assertTrue(stringWriter.toString().contains("Created successfully"));
+        assertTrue(consoleOutputCapturer.getStdout().contains("Created successfully"));
     }
 
     @Test
@@ -654,19 +655,17 @@ public class CmdFunctionsTest {
 
     @Test
     public void testStateGetterWithoutKey() throws Exception {
-        CommandLine commander = cmd.getCommander();
-        @Cleanup
-        StringWriter stringWriter = new StringWriter();
-        @Cleanup
-        PrintWriter printWriter = new PrintWriter(stringWriter);
-        commander.setErr(printWriter);
-        cmd.run(new String[]{
+        ConsoleOutputCapturer consoleOutputCapturer = new ConsoleOutputCapturer();
+        consoleOutputCapturer.start();
+        cmd.run(new String[] {
                 "querystate",
                 "--tenant", TENANT,
                 "--namespace", NAMESPACE,
                 "--name", FN_NAME,
         });
-        assertTrue(stringWriter.toString().startsWith(("State key needs to be specified")));
+        consoleOutputCapturer.stop();
+        String output = consoleOutputCapturer.getStderr();
+        assertTrue(output.replace("\n", "").contains("State key needs to be specified"));
         StateGetter stateGetter = cmd.getStateGetter();
         assertEquals(TENANT, stateGetter.getTenant());
         assertEquals(NAMESPACE, stateGetter.getNamespace());
@@ -896,5 +895,80 @@ public class CmdFunctionsTest {
         });
         verify(functions, times(1))
                 .downloadFunction(JAR_NAME, TENANT, NAMESPACE, FN_NAME, true);
+    }
+
+
+    public static class ConsoleOutputCapturer {
+        private ByteArrayOutputStream stdout;
+        private ByteArrayOutputStream stderr;
+        private PrintStream previous;
+        private boolean capturing;
+
+        public void start() {
+            if (capturing) {
+                return;
+            }
+
+            capturing = true;
+            previous = System.out;
+            stdout = new ByteArrayOutputStream();
+            stderr = new ByteArrayOutputStream();
+
+            OutputStream outputStreamCombinerstdout =
+                    new OutputStreamCombiner(Arrays.asList(previous, stdout));
+            PrintStream stdoutStream = new PrintStream(outputStreamCombinerstdout);
+
+            OutputStream outputStreamCombinerStderr =
+                    new OutputStreamCombiner(Arrays.asList(previous, stderr));
+            PrintStream stderrStream = new PrintStream(outputStreamCombinerStderr);
+
+            System.setOut(stdoutStream);
+            System.setErr(stderrStream);
+        }
+
+        public void stop() {
+            if (!capturing) {
+                return;
+            }
+
+            System.setOut(previous);
+
+            previous = null;
+            capturing = false;
+        }
+
+        public String getStdout() {
+            return stdout.toString();
+        }
+
+        public String getStderr() {
+            return stderr.toString();
+        }
+
+        private static class OutputStreamCombiner extends OutputStream {
+            private List<OutputStream> outputStreams;
+
+            public OutputStreamCombiner(List<OutputStream> outputStreams) {
+                this.outputStreams = outputStreams;
+            }
+
+            public void write(int b) throws IOException {
+                for (OutputStream os : outputStreams) {
+                    os.write(b);
+                }
+            }
+
+            public void flush() throws IOException {
+                for (OutputStream os : outputStreams) {
+                    os.flush();
+                }
+            }
+
+            public void close() throws IOException {
+                for (OutputStream os : outputStreams) {
+                    os.close();
+                }
+            }
+        }
     }
 }
