@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -19,13 +19,13 @@
 package org.apache.pulsar.client.cli;
 
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
+import com.beust.jcommander.Parameter;
+import com.beust.jcommander.ParameterException;
+import com.beust.jcommander.Parameters;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.util.concurrent.RateLimiter;
 import com.google.gson.JsonParseException;
-import java.io.ByteArrayOutputStream;
-import java.io.EOFException;
-import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -35,17 +35,11 @@ import java.util.Base64;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.apache.avro.generic.GenericDatumReader;
-import org.apache.avro.generic.GenericDatumWriter;
-import org.apache.avro.io.DecoderFactory;
-import org.apache.avro.io.Encoder;
-import org.apache.avro.io.EncoderFactory;
-import org.apache.avro.io.JsonDecoder;
 import org.apache.pulsar.client.api.Authentication;
 import org.apache.pulsar.client.api.AuthenticationDataProvider;
 import org.apache.pulsar.client.api.ClientBuilder;
@@ -55,7 +49,6 @@ import org.apache.pulsar.client.api.PulsarClient;
 import org.apache.pulsar.client.api.PulsarClientException;
 import org.apache.pulsar.client.api.Schema;
 import org.apache.pulsar.client.api.TypedMessageBuilder;
-import org.apache.pulsar.client.api.schema.KeyValueSchema;
 import org.apache.pulsar.client.impl.schema.SchemaInfoImpl;
 import org.apache.pulsar.common.naming.TopicName;
 import org.apache.pulsar.common.schema.KeyValue;
@@ -74,18 +67,13 @@ import org.eclipse.jetty.websocket.client.ClientUpgradeRequest;
 import org.eclipse.jetty.websocket.client.WebSocketClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import picocli.CommandLine;
-import picocli.CommandLine.Command;
-import picocli.CommandLine.Model.CommandSpec;
-import picocli.CommandLine.Option;
-import picocli.CommandLine.Parameters;
-import picocli.CommandLine.Spec;
 
 /**
  * pulsar-client produce command implementation.
+ *
  */
-@Command(description = "Produce messages to a specified topic")
-public class CmdProduce extends AbstractCmd {
+@Parameters(commandDescription = "Produce messages to a specified topic")
+public class CmdProduce {
 
     private static final Logger LOG = LoggerFactory.getLogger(PulsarClientTool.class);
     private static final int MAX_MESSAGES = 1000;
@@ -93,71 +81,66 @@ public class CmdProduce extends AbstractCmd {
     private static final String KEY_VALUE_ENCODING_TYPE_SEPARATED = "separated";
     private static final String KEY_VALUE_ENCODING_TYPE_INLINE = "inline";
 
-    @Parameters(description = "TopicName", arity = "1")
-    private String topic;
+    @Parameter(description = "TopicName", required = true)
+    private List<String> mainOptions;
 
-    @Option(names = { "-m", "--messages" },
-            description = "Messages to send, either -m or -f must be specified. Specify -m for each message.")
+    @Parameter(names = { "-m", "--messages" },
+               description = "Messages to send, either -m or -f must be specified. The default separator is comma",
+               splitter = NoSplitter.class)
     private List<String> messages = new ArrayList<>();
 
-    @Option(names = { "-f", "--files" },
+    @Parameter(names = { "-f", "--files" },
                description = "Comma separated file paths to send, either -m or -f must be specified.")
     private List<String> messageFileNames = new ArrayList<>();
 
-    @Option(names = { "-n", "--num-produce" },
+    @Parameter(names = { "-n", "--num-produce" },
                description = "Number of times to send message(s), the count of messages/files * num-produce "
                        + "should below than " + MAX_MESSAGES + ".")
     private int numTimesProduce = 1;
 
-    @Option(names = { "-r", "--rate" },
+    @Parameter(names = { "-r", "--rate" },
                description = "Rate (in msg/sec) at which to produce,"
                        + " value 0 means to produce messages as fast as possible.")
     private double publishRate = 0;
 
-    @Option(names = { "-db", "--disable-batching" }, description = "Disable batch sending of messages")
+    @Parameter(names = { "-db", "--disable-batching" }, description = "Disable batch sending of messages")
     private boolean disableBatching = false;
 
-    @Option(names = { "-c",
+    @Parameter(names = { "-c",
             "--chunking" }, description = "Should split the message and publish in chunks if message size is "
             + "larger than allowed max size")
     private boolean chunkingAllowed = false;
 
-    @Option(names = { "-s", "--separator" },
+    @Parameter(names = { "-s", "--separator" },
                description = "Character to split messages string on default is comma")
     private String separator = ",";
 
-    @Option(names = { "-p", "--properties"}, description = "Properties to add, Comma separated "
+    @Parameter(names = { "-p", "--properties"}, description = "Properties to add, Comma separated "
             + "key=value string, like k1=v1,k2=v2.")
     private List<String> properties = new ArrayList<>();
 
-    @Option(names = { "-k", "--key"}, description = "Partitioning key to add to each message")
+    @Parameter(names = { "-k", "--key"}, description = "message key to add ")
     private String key;
-    @Option(names = { "-kvk", "--key-value-key"}, description = "Value to add as message key in KeyValue schema")
-    private String keyValueKey;
-    @Option(names = {"-kvkf", "--key-value-key-file"},
-            description = "Path to file containing the value to add as message key in KeyValue schema. "
-            + "JSON and AVRO files are supported.")
-    private String keyValueKeyFile;
 
-    @Option(names = { "-vs", "--value-schema"}, description = "Schema type (can be bytes,avro,json,string...)")
+    @Parameter(names = { "-vs", "--value-schema"}, description = "Schema type (can be bytes,avro,json,string...)")
     private String valueSchema = "bytes";
 
-    @Option(names = { "-ks", "--key-schema"}, description = "Schema type (can be bytes,avro,json,string...)")
+    @Parameter(names = { "-ks", "--key-schema"}, description = "Schema type (can be bytes,avro,json,string...)")
     private String keySchema = "string";
 
-    @Option(names = { "-kvet", "--key-value-encoding-type"},
+    @Parameter(names = { "-kvet", "--key-value-encoding-type"},
             description = "Key Value Encoding Type (it can be separated or inline)")
     private String keyValueEncodingType = null;
 
-    @Option(names = { "-ekn", "--encryption-key-name" }, description = "The public key name to encrypt payload")
+    @Parameter(names = { "-ekn", "--encryption-key-name" }, description = "The public key name to encrypt payload")
     private String encKeyName = null;
 
-    @Option(names = { "-ekv",
+    @Parameter(names = { "-ekv",
             "--encryption-key-value" }, description = "The URI of public key to encrypt payload, for example "
                     + "file:///path/to/public.key or data:application/x-pem-file;base64,*****")
     private String encKeyValue = null;
 
-    @Option(names = { "-dr",
+    @Parameter(names = { "-dr",
             "--disable-replication" }, description = "Disable geo-replication for messages.")
     private boolean disableReplication = false;
 
@@ -171,6 +154,7 @@ public class CmdProduce extends AbstractCmd {
 
     /**
      * Set Pulsar client configuration.
+     *
      */
     public void updateConfig(ClientBuilder newBuilder, Authentication authentication, String serviceURL) {
         this.clientBuilder = newBuilder;
@@ -187,19 +171,11 @@ public class CmdProduce extends AbstractCmd {
      *
      * @return list of message bodies
      */
-    static List<byte[]> generateMessageBodies(List<String> stringMessages, List<String> messageFileNames,
-                                              Schema schema) {
+    private List<byte[]> generateMessageBodies(List<String> stringMessages, List<String> messageFileNames) {
         List<byte[]> messageBodies = new ArrayList<>();
 
         for (String m : stringMessages) {
-            if (schema.getSchemaInfo().getType() == SchemaType.AVRO) {
-                // JSON TO AVRO
-                org.apache.avro.Schema avroSchema = ((Optional<org.apache.avro.Schema>) schema.getNativeSchema()).get();
-                byte[] encoded = jsonToAvro(m, avroSchema);
-                messageBodies.add(encoded);
-            } else {
-                messageBodies.add(m.getBytes());
-            }
+            messageBodies.add(m.getBytes());
         }
 
         try {
@@ -214,32 +190,6 @@ public class CmdProduce extends AbstractCmd {
         return messageBodies;
     }
 
-    private static byte[] jsonToAvro(String m, org.apache.avro.Schema avroSchema) {
-        try {
-            GenericDatumReader<Object> reader = new GenericDatumReader<>(avroSchema);
-            JsonDecoder jsonDecoder = DecoderFactory.get().jsonDecoder(avroSchema, m);
-            GenericDatumWriter<Object> writer = new GenericDatumWriter<>(avroSchema);
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            Encoder e = EncoderFactory.get().binaryEncoder(out, null);
-            Object datum = null;
-            while (true) {
-                try {
-                    datum = reader.read(datum, jsonDecoder);
-                } catch (EOFException eofException) {
-                    break;
-                }
-                writer.write(datum, e);
-                e.flush();
-            }
-            return out.toByteArray();
-        } catch (IOException e) {
-            throw new RuntimeException("Cannot convert " + m + " to AVRO " + e.getMessage(), e);
-        }
-    }
-
-    @Spec
-    private CommandSpec commandSpec;
-
     /**
      * Run the producer.
      *
@@ -247,18 +197,20 @@ public class CmdProduce extends AbstractCmd {
      * @throws Exception
      */
     public int run() throws PulsarClientException {
+        if (mainOptions.size() != 1) {
+            throw (new ParameterException("Please provide one and only one topic name."));
+        }
         if (this.numTimesProduce <= 0) {
-            throw new CommandLine.ParameterException(commandSpec.commandLine(),
-                    "Number of times need to be positive number.");
+            throw (new ParameterException("Number of times need to be positive number."));
         }
 
-        if (messages.size() > 0) {
-            messages = messages.stream().map(str -> str.split(separator)).flatMap(Stream::of).toList();
+        if (messages.size() > 0){
+            messages = messages.stream().map(str -> str.split(separator)).flatMap(Stream::of)
+                    .collect(Collectors.toList());
         }
 
         if (messages.size() == 0 && messageFileNames.size() == 0) {
-            throw new CommandLine.ParameterException(commandSpec.commandLine(),
-                    "Please supply message content with either --messages or --files");
+            throw (new ParameterException("Please supply message content with either --messages or --files"));
         }
 
         if (keyValueEncodingType == null) {
@@ -269,7 +221,7 @@ public class CmdProduce extends AbstractCmd {
                 case KEY_VALUE_ENCODING_TYPE_INLINE:
                     break;
                 default:
-                    throw (new IllegalArgumentException("--key-value-encoding-type "
+                    throw (new ParameterException("--key-value-encoding-type "
                             + keyValueEncodingType + " is not valid, only 'separated' or 'inline'"));
             }
         }
@@ -278,8 +230,10 @@ public class CmdProduce extends AbstractCmd {
         if (totalMessages > MAX_MESSAGES) {
             String msg = "Attempting to send " + totalMessages + " messages. Please do not send more than "
                     + MAX_MESSAGES + " messages";
-            throw new IllegalArgumentException(msg);
+            throw new ParameterException(msg);
         }
+
+        String topic = this.mainOptions.get(0);
 
         if (this.serviceURL.startsWith("ws")) {
             return publishToWebSocket(topic);
@@ -306,35 +260,14 @@ public class CmdProduce extends AbstractCmd {
                 producerBuilder.defaultCryptoKeyReader(this.encKeyValue);
             }
             try (Producer<?> producer = producerBuilder.create();) {
-                Schema<?> schemaForPayload = schema.getSchemaInfo().getType() == SchemaType.KEY_VALUE
-                        ? ((KeyValueSchema) schema).getValueSchema() : schema;
-                List<byte[]> messageBodies = generateMessageBodies(this.messages, this.messageFileNames,
-                        schemaForPayload);
+
+                List<byte[]> messageBodies = generateMessageBodies(this.messages, this.messageFileNames);
                 RateLimiter limiter = (this.publishRate > 0) ? RateLimiter.create(this.publishRate) : null;
 
                 Map<String, String> kvMap = new HashMap<>();
                 for (String property : properties) {
                     String[] kv = property.split("=");
                     kvMap.put(kv[0], kv[1]);
-                }
-
-                final byte[] keyValueKeyBytes;
-                if (this.keyValueKey != null) {
-                    if (keyValueEncodingType == KEY_VALUE_ENCODING_TYPE_NOT_SET) {
-                        throw new IllegalArgumentException(
-                            "Key value encoding type must be set when using --key-value-key");
-                    }
-                    keyValueKeyBytes = this.keyValueKey.getBytes(StandardCharsets.UTF_8);
-                } else if (this.keyValueKeyFile != null) {
-                    if (keyValueEncodingType == KEY_VALUE_ENCODING_TYPE_NOT_SET) {
-                        throw new IllegalArgumentException(
-                            "Key value encoding type must be set when using --key-value-key-file");
-                    }
-                    keyValueKeyBytes = Files.readAllBytes(Paths.get(this.keyValueKeyFile));
-                } else if (this.key != null) {
-                    keyValueKeyBytes = this.key.getBytes(StandardCharsets.UTF_8);
-                } else {
-                    keyValueKeyBytes = null;
                 }
 
                 for (int i = 0; i < this.numTimesProduce; i++) {
@@ -359,7 +292,8 @@ public class CmdProduce extends AbstractCmd {
                             case KEY_VALUE_ENCODING_TYPE_SEPARATED:
                             case KEY_VALUE_ENCODING_TYPE_INLINE:
                                 KeyValue kv = new KeyValue<>(
-                                        keyValueKeyBytes,
+                                        // TODO: support AVRO encoded key
+                                        key != null ? key.getBytes(StandardCharsets.UTF_8) : null,
                                         content);
                                 message.value(kv);
                                 break;
@@ -409,7 +343,7 @@ public class CmdProduce extends AbstractCmd {
         Schema<?> base;
         switch (schema) {
             case "string":
-                base = Schema.STRING;
+                base =  Schema.STRING;
                 break;
             case "bytes":
                 // no need for wrappers
@@ -500,7 +434,7 @@ public class CmdProduce extends AbstractCmd {
         }
 
         try {
-            List<byte[]> messageBodies = generateMessageBodies(this.messages, this.messageFileNames, Schema.BYTES);
+            List<byte[]> messageBodies = generateMessageBodies(this.messages, this.messageFileNames);
             RateLimiter limiter = (this.publishRate > 0) ? RateLimiter.create(this.publishRate) : null;
             for (int i = 0; i < this.numTimesProduce; i++) {
                 int index = i * 10;
@@ -547,7 +481,7 @@ public class CmdProduce extends AbstractCmd {
             ProducerMessage msg = new ProducerMessage();
             msg.payload = Base64.getEncoder().encodeToString(content);
             msg.key = Integer.toString(index);
-            return ObjectMapperFactory.getMapper().writer().writeValueAsString(msg);
+            return ObjectMapperFactory.getThreadLocal().writeValueAsString(msg);
         }
 
         public boolean awaitClose(int duration, TimeUnit unit) throws InterruptedException {
