@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -20,10 +20,13 @@ package org.apache.pulsar.functions;
 
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 import static org.apache.pulsar.common.functions.Utils.inferMissingArguments;
+
+import com.beust.jcommander.IStringConverter;
+import com.beust.jcommander.JCommander;
+import com.beust.jcommander.Parameter;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonParser;
-import io.prometheus.client.exporter.HTTPServer;
 import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
@@ -31,7 +34,7 @@ import java.io.UncheckedIOException;
 import java.net.InetSocketAddress;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -45,9 +48,12 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
+
+import io.prometheus.client.exporter.HTTPServer;
 import lombok.Builder;
 import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.pulsar.functions.instance.AuthenticationConfig;
 import org.apache.pulsar.common.functions.FunctionConfig;
 import org.apache.pulsar.common.functions.FunctionDefinition;
 import org.apache.pulsar.common.functions.Utils;
@@ -57,7 +63,6 @@ import org.apache.pulsar.common.io.SourceConfig;
 import org.apache.pulsar.common.nar.FileUtils;
 import org.apache.pulsar.common.util.ObjectMapperFactory;
 import org.apache.pulsar.common.util.Reflections;
-import org.apache.pulsar.functions.instance.AuthenticationConfig;
 import org.apache.pulsar.functions.instance.InstanceConfig;
 import org.apache.pulsar.functions.instance.stats.FunctionCollectorRegistry;
 import org.apache.pulsar.functions.proto.Function;
@@ -84,10 +89,6 @@ import org.apache.pulsar.functions.utils.functions.FunctionArchive;
 import org.apache.pulsar.functions.utils.functions.FunctionUtils;
 import org.apache.pulsar.functions.utils.io.Connector;
 import org.apache.pulsar.functions.utils.io.ConnectorUtils;
-import picocli.CommandLine;
-import picocli.CommandLine.ITypeConverter;
-import picocli.CommandLine.Option;
-import picocli.CommandLine.TypeConversionException;
 
 @Slf4j
 public class LocalRunner implements AutoCloseable {
@@ -116,96 +117,83 @@ public class LocalRunner implements AutoCloseable {
         boolean classLoaderCreated;
     }
 
-    public static class FunctionConfigConverter implements ITypeConverter<FunctionConfig> {
+    public static class FunctionConfigConverter implements IStringConverter<FunctionConfig> {
         @Override
         public FunctionConfig convert(String value) {
             try {
-                return ObjectMapperFactory.getMapper().reader().readValue(value, FunctionConfig.class);
+                return ObjectMapperFactory.getThreadLocal().readValue(value, FunctionConfig.class);
             } catch (IOException e) {
-                throw new TypeConversionException(e.getMessage());
+                throw new RuntimeException("Failed to parse function config:", e);
             }
         }
     }
 
-    public static class SourceConfigConverter implements ITypeConverter<SourceConfig> {
+    public static class SourceConfigConverter implements IStringConverter<SourceConfig> {
         @Override
         public SourceConfig convert(String value) {
             try {
-                return ObjectMapperFactory.getMapper().reader().readValue(value, SourceConfig.class);
+                return ObjectMapperFactory.getThreadLocal().readValue(value, SourceConfig.class);
             } catch (IOException e) {
-                throw new TypeConversionException(e.getMessage());
+                throw new RuntimeException("Failed to parse source config:", e);
             }
         }
     }
 
-    public static class SinkConfigConverter implements ITypeConverter<SinkConfig> {
+    public static class SinkConfigConverter implements IStringConverter<SinkConfig> {
         @Override
         public SinkConfig convert(String value) {
             try {
-                return ObjectMapperFactory.getMapper().reader().readValue(value, SinkConfig.class);
+                return ObjectMapperFactory.getThreadLocal().readValue(value, SinkConfig.class);
             } catch (IOException e) {
-                throw new TypeConversionException(e.getMessage());
+                throw new RuntimeException("Failed to parse sink config:", e);
             }
         }
     }
 
-    public static class RuntimeConverter implements ITypeConverter<RuntimeEnv> {
+    public static class RuntimeConverter implements IStringConverter<RuntimeEnv> {
         @Override
         public RuntimeEnv convert(String value) {
             return RuntimeEnv.valueOf(value);
         }
     }
 
-    @Option(names = "--functionConfig", description = "The json representation of FunctionConfig",
-            hidden = true, converter = FunctionConfigConverter.class)
+    @Parameter(names = "--functionConfig", description = "The json representation of FunctionConfig", hidden = true, converter = FunctionConfigConverter.class)
     protected FunctionConfig functionConfig;
-    @Option(names = "--sourceConfig", description = "The json representation of SourceConfig",
-            hidden = true, converter = SourceConfigConverter.class)
+    @Parameter(names = "--sourceConfig", description = "The json representation of SourceConfig", hidden = true, converter = SourceConfigConverter.class)
     protected SourceConfig sourceConfig;
-    @Option(names = "--sinkConfig", description = "The json representation of SinkConfig",
-            hidden = true, converter = SinkConfigConverter.class)
+    @Parameter(names = "--sinkConfig", description = "The json representation of SinkConfig", hidden = true, converter = SinkConfigConverter.class)
     protected SinkConfig sinkConfig;
-    @Option(names = "--stateStorageImplClass", description = "The implemenatation class "
-            + "state storage service (by default Apache BookKeeper)", hidden = true, required = false)
+    @Parameter(names = "--stateStorageImplClass", description = "The implemenatation class state storage service (by default Apache BookKeeper)", hidden = true, required = false)
     protected String stateStorageImplClass;
-    @Option(names = "--stateStorageServiceUrl", description = "The URL for the state storage service "
-            + "(by default Apache BookKeeper)", hidden = true)
+    @Parameter(names = "--stateStorageServiceUrl", description = "The URL for the state storage service (by default Apache BookKeeper)", hidden = true)
     protected String stateStorageServiceUrl;
-    @Option(names = "--brokerServiceUrl", description = "The URL for the Pulsar broker", hidden = true)
+    @Parameter(names = "--brokerServiceUrl", description = "The URL for the Pulsar broker", hidden = true)
     protected String brokerServiceUrl;
-    @Option(names = "--webServiceUrl", description = "The URL for the Pulsar web service", hidden = true)
+    @Parameter(names = "--webServiceUrl", description = "The URL for the Pulsar web service", hidden = true)
     protected String webServiceUrl = null;
-    @Option(names = "--clientAuthPlugin", description = "Client authentication plugin using which "
-            + "function-process can connect to broker", hidden = true)
+    @Parameter(names = "--clientAuthPlugin", description = "Client authentication plugin using which function-process can connect to broker", hidden = true)
     protected String clientAuthPlugin;
-    @Option(names = "--clientAuthParams", description = "Client authentication param", hidden = true)
+    @Parameter(names = "--clientAuthParams", description = "Client authentication param", hidden = true)
     protected String clientAuthParams;
-    @Option(names = "--useTls", description = "Use tls connection\n", hidden = true, arity = "1")
+    @Parameter(names = "--useTls", description = "Use tls connection\n", hidden = true, arity = 1)
     protected boolean useTls;
-    @Option(names = "--tlsAllowInsecureConnection", description = "Allow insecure tls connection\n",
-            hidden = true, arity = "1")
+    @Parameter(names = "--tlsAllowInsecureConnection", description = "Allow insecure tls connection\n", hidden = true, arity = 1)
     protected boolean tlsAllowInsecureConnection;
-    @Option(names = "--tlsHostNameVerificationEnabled", description = "Enable hostname verification", hidden = true
-            , arity = "1")
+    @Parameter(names = "--tlsHostNameVerificationEnabled", description = "Enable hostname verification", hidden = true, arity = 1)
     protected boolean tlsHostNameVerificationEnabled;
-    @Option(names = "--tlsTrustCertFilePath", description = "tls trust cert file path", hidden = true)
+    @Parameter(names = "--tlsTrustCertFilePath", description = "tls trust cert file path", hidden = true)
     protected String tlsTrustCertFilePath;
-    @Option(names = "--instanceIdOffset", description = "Start the instanceIds from this offset", hidden = true)
+    @Parameter(names = "--instanceIdOffset", description = "Start the instanceIds from this offset", hidden = true)
     protected int instanceIdOffset = 0;
-    @Option(names = "--runtime", description = "Function runtime to use (Thread/Process)", hidden = true,
-            converter = RuntimeConverter.class)
+    @Parameter(names = "--runtime", description = "Function runtime to use (Thread/Process)", hidden = true, converter = RuntimeConverter.class)
     protected RuntimeEnv runtimeEnv;
-    @Option(names = "--secretsProviderClassName",
-            description = "Whats the classname of secrets provider", hidden = true)
+    @Parameter(names = "--secretsProviderClassName", description = "Whats the classname of secrets provider", hidden = true)
     protected String secretsProviderClassName;
-    @Option(names = "--secretsProviderConfig",
-            description = "Whats the config for the secrets provider", hidden = true)
+    @Parameter(names = "--secretsProviderConfig", description = "Whats the config for the secrets provider", hidden = true)
     protected String secretsProviderConfig;
-    @Option(names = "--metricsPortStart", description = "The starting port range for metrics server. When running "
-            + "instances as threads, one metrics server is used to host the stats for all instances.", hidden = true)
+    @Parameter(names = "--metricsPortStart", description = "The starting port range for metrics server. When running instances as threads, one metrics server is used to host the stats for all instances.", hidden = true)
     protected Integer metricsPortStart;
-    @Option(names = "--exitOnError", description = "The starting port range for metrics server. When running "
-            + "instances as threads, one metrics server is used to host the stats for all instances.", hidden = true)
+    @Parameter(names = "--exitOnError", description = "The starting port range for metrics server. When running instances as threads, one metrics server is used to host the stats for all instances.", hidden = true)
     protected boolean exitOnError;
 
     private static final String DEFAULT_SERVICE_URL = "pulsar://localhost:6650";
@@ -213,10 +201,11 @@ public class LocalRunner implements AutoCloseable {
 
     public static void main(String[] args) throws Exception {
         LocalRunner localRunner = LocalRunner.builder().build();
-        CommandLine jcommander = new CommandLine(localRunner);
-        jcommander.setCommandName("LocalRunner");
+        JCommander jcommander = new JCommander(localRunner);
+        jcommander.setProgramName("LocalRunner");
 
-        jcommander.parseArgs(args);
+        // parse args by JCommander
+        jcommander.parse(args);
         try {
             localRunner.start(true);
         } catch (Exception e) {
@@ -272,13 +261,11 @@ public class LocalRunner implements AutoCloseable {
     }
 
     private static String getPulsarDirectory(String directory) {
-        final Path directoryPath;
-        if (System.getenv("PULSAR_HOME") != null) {
-            directoryPath = Path.of(System.getenv("PULSAR_HOME"), directory);
-        } else {
-            directoryPath = Path.of(directory);
+        String pulsarHome = System.getenv("PULSAR_HOME");
+        if (pulsarHome == null) {
+            pulsarHome = Paths.get("").toAbsolutePath().toString();
         }
-        return directoryPath.toAbsolutePath().normalize().toString();
+        return Paths.get(pulsarHome, directory).toString();
     }
 
     private static File createNarExtractionTempDirectory() {
@@ -446,8 +433,7 @@ public class LocalRunner implements AutoCloseable {
                 webServiceUrl = DEFAULT_WEB_SERVICE_URL;
             }
 
-            if ((sourceConfig != null || sinkConfig != null
-                    || functionConfig.getRuntime() == FunctionConfig.Runtime.JAVA)
+            if ((sourceConfig != null || sinkConfig != null || functionConfig.getRuntime() == FunctionConfig.Runtime.JAVA)
                     && (runtimeEnv == null || runtimeEnv == RuntimeEnv.THREAD)) {
                 // By default run java functions as threads
                 startThreadedMode(functionDetails, parallelism, instanceIdOffset, serviceUrl,
@@ -466,7 +452,7 @@ public class LocalRunner implements AutoCloseable {
                     log.info("RuntimeSpawner quit because of", spawner.getRuntime().getDeathException());
                 }
                 close();
-            } else {
+            } else  {
                 synchronized (this) {
                     while (running.get()) {
                         this.wait();
@@ -578,8 +564,7 @@ public class LocalRunner implements AutoCloseable {
             if (functionConfig != null) {
                 instanceConfig.setMaxPendingAsyncRequests(functionConfig.getMaxPendingAsyncRequests());
                 if (functionConfig.getExposePulsarAdminClientEnabled() != null) {
-                    instanceConfig
-                            .setExposePulsarAdminClientEnabled(functionConfig.getExposePulsarAdminClientEnabled());
+                    instanceConfig.setExposePulsarAdminClientEnabled(functionConfig.getExposePulsarAdminClientEnabled());
                 }
             }
 
@@ -633,11 +618,10 @@ public class LocalRunner implements AutoCloseable {
 
         SecretsProvider secretsProvider;
         if (secretsProviderClassName != null) {
-            secretsProvider = (SecretsProvider) Reflections
-                    .createInstance(secretsProviderClassName, ClassLoader.getSystemClassLoader());
+            secretsProvider = (SecretsProvider) Reflections.createInstance(secretsProviderClassName, ClassLoader.getSystemClassLoader());
             Map<String, String> config = null;
             if (secretsProviderConfig != null) {
-                config = (Map<String, String>) new Gson().fromJson(secretsProviderConfig, Map.class);
+                config = (Map<String, String>)new Gson().fromJson(secretsProviderConfig, Map.class);
             }
             secretsProvider.init(config);
         } else {
@@ -685,8 +669,7 @@ public class LocalRunner implements AutoCloseable {
             if (functionConfig != null) {
                 instanceConfig.setMaxPendingAsyncRequests(functionConfig.getMaxPendingAsyncRequests());
                 if (functionConfig.getExposePulsarAdminClientEnabled() != null) {
-                    instanceConfig
-                            .setExposePulsarAdminClientEnabled(functionConfig.getExposePulsarAdminClientEnabled());
+                    instanceConfig.setExposePulsarAdminClientEnabled(functionConfig.getExposePulsarAdminClientEnabled());
                 }
             }
 
@@ -777,10 +760,9 @@ public class LocalRunner implements AutoCloseable {
         if (secretsProviderClassName != null) {
             Map<String, String> config = null;
             if (secretsProviderConfig != null) {
-                config = (Map<String, String>) new Gson().fromJson(secretsProviderConfig, Map.class);
+                config = (Map<String, String>)new Gson().fromJson(secretsProviderConfig, Map.class);
             }
-            secretsProviderConfigurator =
-                    new NameAndConfigBasedSecretsProviderConfigurator(secretsProviderClassName, config);
+            secretsProviderConfigurator = new NameAndConfigBasedSecretsProviderConfigurator(secretsProviderClassName, config);
         } else {
             secretsProviderConfigurator = new DefaultSecretsProviderConfigurator();
         }
