@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -38,20 +38,15 @@ import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.fail;
+
+import com.google.common.collect.ImmutableList;
 import io.netty.buffer.Unpooled;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import lombok.Cleanup;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.distributedlog.api.namespace.Namespace;
-import org.apache.pulsar.client.admin.Functions;
 import org.apache.pulsar.client.admin.PulsarAdmin;
 import org.apache.pulsar.client.admin.Sinks;
 import org.apache.pulsar.client.admin.Sources;
+import org.apache.pulsar.client.admin.Functions;
 import org.apache.pulsar.client.api.Message;
 import org.apache.pulsar.client.api.MessageId;
 import org.apache.pulsar.client.api.PulsarClient;
@@ -59,10 +54,10 @@ import org.apache.pulsar.client.api.Reader;
 import org.apache.pulsar.client.api.ReaderBuilder;
 import org.apache.pulsar.client.impl.MessageIdImpl;
 import org.apache.pulsar.client.impl.MessageImpl;
+import org.apache.pulsar.functions.instance.AuthenticationConfig;
 import org.apache.pulsar.common.api.proto.MessageMetadata;
 import org.apache.pulsar.common.functions.WorkerInfo;
 import org.apache.pulsar.common.util.ObjectMapperFactory;
-import org.apache.pulsar.functions.instance.AuthenticationConfig;
 import org.apache.pulsar.functions.proto.Function;
 import org.apache.pulsar.functions.runtime.RuntimeFactory;
 import org.apache.pulsar.functions.runtime.kubernetes.KubernetesRuntime;
@@ -81,6 +76,13 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.testng.annotations.Test;
 
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CompletableFuture;
+
 @Slf4j
 public class FunctionRuntimeManagerTest {
     private final String PULSAR_SERVICE_URL = "pulsar://localhost:6650";
@@ -92,7 +94,7 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper().convertValue(
+                ObjectMapperFactory.getThreadLocal().convertValue(
                         new ThreadRuntimeFactoryConfig().setThreadGroupName("test"), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
@@ -109,12 +111,10 @@ public class FunctionRuntimeManagerTest {
         PulsarWorkerService workerService = mock(PulsarWorkerService.class);
         doReturn(pulsarClient).when(workerService).getClient();
         doReturn(mock(PulsarAdmin.class)).when(workerService).getFunctionAdmin();
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
             mockRuntimeFactory(runtimeFactoryMockedStatic);
 
             // test new assignment add functions
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = spy(new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -166,8 +166,7 @@ public class FunctionRuntimeManagerTest {
                     .get("test-tenant/test-namespace/func-2:0"), assignment2);
             verify(functionActioner, times(1)).startFunction(any(FunctionRuntimeInfo.class));
             verify(functionActioner).startFunction(argThat(
-                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData()
-                            .equals(function1)));
+                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData().equals(function1)));
             verify(functionActioner, times(0)).stopFunction(any(FunctionRuntimeInfo.class));
 
             assertEquals(functionRuntimeManager.functionRuntimeInfos.size(), 1);
@@ -185,7 +184,7 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper().convertValue(
+                ObjectMapperFactory.getThreadLocal().convertValue(
                         new ThreadRuntimeFactoryConfig().setThreadGroupName("test"), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
@@ -201,13 +200,11 @@ public class FunctionRuntimeManagerTest {
         doReturn(pulsarClient).when(workerService).getClient();
         doReturn(mock(PulsarAdmin.class)).when(workerService).getFunctionAdmin();
 
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
             mockRuntimeFactory(runtimeFactoryMockedStatic);
 
 
             // test new assignment delete functions
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = spy(new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -257,8 +254,7 @@ public class FunctionRuntimeManagerTest {
             functionRuntimeManager.processAssignment(assignment1);
             functionRuntimeManager.processAssignment(assignment2);
 
-            functionRuntimeManager
-                    .deleteAssignment(FunctionCommon.getFullyQualifiedInstanceId(assignment1.getInstance()));
+            functionRuntimeManager.deleteAssignment(FunctionCommon.getFullyQualifiedInstanceId(assignment1.getInstance()));
             verify(functionRuntimeManager, times(0)).setAssignment(any(Function.Assignment.class));
             verify(functionRuntimeManager, times(1)).deleteAssignment(any(String.class));
 
@@ -269,16 +265,14 @@ public class FunctionRuntimeManagerTest {
             verify(functionActioner, times(0)).startFunction(any(FunctionRuntimeInfo.class));
             verify(functionActioner, times(1)).terminateFunction(any(FunctionRuntimeInfo.class));
             verify(functionActioner).terminateFunction(argThat(
-                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData()
-                            .equals(function1)));
+                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData().equals(function1)));
 
             assertEquals(functionRuntimeManager.functionRuntimeInfos.size(), 0);
         }
     }
 
     private void mockRuntimeFactory(MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic) {
-        runtimeFactoryMockedStatic
-                .when(() -> RuntimeFactory.getFuntionRuntimeFactory(eq(ThreadRuntimeFactory.class.getName())))
+        runtimeFactoryMockedStatic.when(() -> RuntimeFactory.getFuntionRuntimeFactory(eq(ThreadRuntimeFactory.class.getName())))
                 .thenAnswer((Answer<ThreadRuntimeFactory>) invocation -> new ThreadRuntimeFactory());
     }
 
@@ -288,7 +282,7 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper().convertValue(
+                ObjectMapperFactory.getThreadLocal().convertValue(
                         new ThreadRuntimeFactoryConfig().setThreadGroupName("test"), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
@@ -304,11 +298,9 @@ public class FunctionRuntimeManagerTest {
         doReturn(pulsarClient).when(workerService).getClient();
         doReturn(mock(PulsarAdmin.class)).when(workerService).getFunctionAdmin();
 
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
             mockRuntimeFactory(runtimeFactoryMockedStatic);
             // test new assignment update functions
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -372,13 +364,11 @@ public class FunctionRuntimeManagerTest {
             verify(functionActioner, times(0)).terminateFunction(any(FunctionRuntimeInfo.class));
 
             verify(functionActioner).stopFunction(argThat(
-                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData()
-                            .equals(function2)));
+                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData().equals(function2)));
 
             verify(functionActioner, times(1)).startFunction(any(FunctionRuntimeInfo.class));
             verify(functionActioner).startFunction(argThat(
-                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData()
-                            .equals(function2)));
+                    functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().getFunctionMetaData().equals(function2)));
 
             assertEquals(functionRuntimeManager.functionRuntimeInfos.size(), 2);
             assertEquals(functionRuntimeManager.workerIdToAssignments.size(), 1);
@@ -427,7 +417,7 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper().convertValue(
+                ObjectMapperFactory.getThreadLocal().convertValue(
                         new ThreadRuntimeFactoryConfig().setThreadGroupName("test"), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
@@ -443,12 +433,10 @@ public class FunctionRuntimeManagerTest {
         doReturn(pulsarClient).when(workerService).getClient();
         doReturn(mock(PulsarAdmin.class)).when(workerService).getFunctionAdmin();
 
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
             mockRuntimeFactory(runtimeFactoryMockedStatic);
 
             // test new assignment update functions
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -530,8 +518,7 @@ public class FunctionRuntimeManagerTest {
                     .get("worker-2"));
 
             assertEquals(functionRuntimeManager.functionRuntimeInfos.size(), 1);
-            assertEquals(functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0"),
-                    functionRuntimeInfo);
+            assertEquals(functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0"), functionRuntimeInfo);
         }
     }
 
@@ -541,7 +528,7 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper().convertValue(
+                ObjectMapperFactory.getThreadLocal().convertValue(
                         new ThreadRuntimeFactoryConfig().setThreadGroupName("test"), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
@@ -638,12 +625,10 @@ public class FunctionRuntimeManagerTest {
 
         ErrorNotifier errorNotifier = mock(ErrorNotifier.class);
 
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
             mockRuntimeFactory(runtimeFactoryMockedStatic);
 
             // test new assignment add functions
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -669,9 +654,7 @@ public class FunctionRuntimeManagerTest {
             verify(functionActioner, times(0)).stopFunction(any(FunctionRuntimeInfo.class));
             verify(functionActioner, times(0)).terminateFunction(any(FunctionRuntimeInfo.class));
 
-            verify(functionActioner).startFunction(
-                    argThat(functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance()
-                            .equals(assignment1.getInstance())));
+            verify(functionActioner).startFunction(argThat(functionRuntimeInfo -> functionRuntimeInfo.getFunctionInstance().equals(assignment1.getInstance())));
 
             assertEquals(functionRuntimeManager.functionRuntimeInfos.size(), 1);
             assertEquals(functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0"),
@@ -690,9 +673,9 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(KubernetesRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper()
+                ObjectMapperFactory.getThreadLocal()
                         .convertValue(new KubernetesRuntimeFactoryConfig()
-                                .setSubmittingInsidePod(false), Map.class));
+                        .setSubmittingInsidePod(false), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
         workerConfig.setPulsarFunctionsCluster("cluster");
@@ -728,14 +711,12 @@ public class FunctionRuntimeManagerTest {
                 workerConfig,
                 kubernetesRuntimeFactory, null, null, null, null, workerService.getPackageUrlValidator()));
 
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
             runtimeFactoryMockedStatic.when(() -> RuntimeFactory.getFuntionRuntimeFactory(anyString()))
                     .thenAnswer(invocation -> kubernetesRuntimeFactory);
 
 
             // test new assignment update functions
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -817,27 +798,21 @@ public class FunctionRuntimeManagerTest {
                     .get("worker-2"));
 
             assertEquals(
-                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0")
-                            .getFunctionInstance(),
+                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0").getFunctionInstance(),
                     functionRuntimeInfo.getFunctionInstance());
             assertNotNull(
-                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0")
-                            .getRuntimeSpawner());
+                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0").getRuntimeSpawner());
 
             assertEquals(
-                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0")
-                            .getRuntimeSpawner().getInstanceConfig().getFunctionDetails(),
+                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0").getRuntimeSpawner().getInstanceConfig().getFunctionDetails(),
                     function1.getFunctionDetails());
             assertEquals(
-                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0")
-                            .getRuntimeSpawner().getInstanceConfig().getInstanceId(),
+                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0").getRuntimeSpawner().getInstanceConfig().getInstanceId(),
                     instance.getInstanceId());
             assertTrue(
-                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0")
-                            .getRuntimeSpawner().getRuntimeFactory() instanceof KubernetesRuntimeFactory);
+                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0").getRuntimeSpawner().getRuntimeFactory() instanceof KubernetesRuntimeFactory);
             assertNotNull(
-                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0")
-                            .getRuntimeSpawner().getRuntime());
+                    functionRuntimeManager.functionRuntimeInfos.get("test-tenant/test-namespace/func-1:0").getRuntimeSpawner().getRuntime());
 
             verify(kubernetesRuntime, times(1)).reinitialize();
         }
@@ -863,6 +838,7 @@ public class FunctionRuntimeManagerTest {
                     mock(FunctionMetaDataManager.class),
                     mock(WorkerStatsManager.class),
                     mock(ErrorNotifier.class));
+
             fail();
         } catch (Exception e) {
             assertEquals(e.getMessage(), "A Function Runtime Factory needs to be set");
@@ -874,8 +850,7 @@ public class FunctionRuntimeManagerTest {
             workerConfig.setWorkerId("worker-1");
             workerConfig.setFunctionRuntimeFactoryClassName("foo");
             workerConfig.setFunctionRuntimeFactoryConfigs(
-                    ObjectMapperFactory.getMapper().getObjectMapper()
-                            .convertValue(new KubernetesRuntimeFactoryConfig(), Map.class));
+                    ObjectMapperFactory.getThreadLocal().convertValue(new KubernetesRuntimeFactoryConfig(), Map.class));
             workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
             workerConfig.setStateStorageServiceUrl("foo");
             workerConfig.setFunctionAssignmentTopicName("assignments");
@@ -901,8 +876,7 @@ public class FunctionRuntimeManagerTest {
             workerConfig.setWorkerId("worker-1");
             workerConfig.setFunctionRuntimeFactoryClassName(FunctionRuntimeManagerTest.class.getName());
             workerConfig.setFunctionRuntimeFactoryConfigs(
-                    ObjectMapperFactory.getMapper().getObjectMapper()
-                            .convertValue(new KubernetesRuntimeFactoryConfig(), Map.class));
+                    ObjectMapperFactory.getThreadLocal().convertValue(new KubernetesRuntimeFactoryConfig(), Map.class));
             workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
             workerConfig.setStateStorageServiceUrl("foo");
             workerConfig.setFunctionAssignmentTopicName("assignments");
@@ -919,8 +893,7 @@ public class FunctionRuntimeManagerTest {
 
             fail();
         } catch (Exception e) {
-            assertEquals(e.getMessage(),
-                    "org.apache.pulsar.functions.worker.FunctionRuntimeManagerTest does not implement org.apache.pulsar.functions.runtime.RuntimeFactory");
+            assertEquals(e.getMessage(), "org.apache.pulsar.functions.worker.FunctionRuntimeManagerTest does not implement org.apache.pulsar.functions.runtime.RuntimeFactory");
         }
 
         // Correct runtime class
@@ -929,17 +902,14 @@ public class FunctionRuntimeManagerTest {
             workerConfig.setWorkerId("worker-1");
             workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
             workerConfig.setFunctionRuntimeFactoryConfigs(
-                    ObjectMapperFactory.getMapper().getObjectMapper()
-                            .convertValue(new KubernetesRuntimeFactoryConfig(), Map.class));
+                    ObjectMapperFactory.getThreadLocal().convertValue(new KubernetesRuntimeFactoryConfig(), Map.class));
             workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
             workerConfig.setStateStorageServiceUrl("foo");
             workerConfig.setFunctionAssignmentTopicName("assignments");
-            try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                    .mockStatic(RuntimeFactory.class);) {
+            try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
                 mockRuntimeFactory(runtimeFactoryMockedStatic);
 
 
-                @Cleanup
                 FunctionRuntimeManager functionRuntimeManager = new FunctionRuntimeManager(
                         workerConfig,
                         mock(PulsarWorkerService.class),
@@ -991,7 +961,6 @@ public class FunctionRuntimeManagerTest {
 
                 })) {
 
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     mock(PulsarWorkerService.class),
@@ -1021,7 +990,6 @@ public class FunctionRuntimeManagerTest {
             workerConfig = new WorkerConfig();
             workerConfig.setProcessContainerFactory(processContainerFactory);
 
-            functionRuntimeManager.close();
             functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     mock(PulsarWorkerService.class),
@@ -1034,8 +1002,7 @@ public class FunctionRuntimeManagerTest {
                     mock(ErrorNotifier.class));
 
             assertEquals(functionRuntimeManager.getRuntimeFactory().getClass(), ProcessRuntimeFactory.class);
-            ProcessRuntimeFactory processRuntimeFactory =
-                    (ProcessRuntimeFactory) functionRuntimeManager.getRuntimeFactory();
+            ProcessRuntimeFactory processRuntimeFactory = (ProcessRuntimeFactory) functionRuntimeManager.getRuntimeFactory();
             assertEquals(processRuntimeFactory.getExtraDependenciesDir(), "extraDependenciesDir");
             assertEquals(processRuntimeFactory.getLogDirectory(), "logDirectory/functions");
             assertEquals(processRuntimeFactory.getPythonInstanceFile(), "pythonInstanceLocation");
@@ -1050,7 +1017,6 @@ public class FunctionRuntimeManagerTest {
             workerConfig.setThreadContainerFactory(threadContainerFactory);
             workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
 
-            functionRuntimeManager.close();
             functionRuntimeManager = new FunctionRuntimeManager(
                     workerConfig,
                     mock(PulsarWorkerService.class),
@@ -1063,8 +1029,7 @@ public class FunctionRuntimeManagerTest {
                     mock(ErrorNotifier.class));
 
             assertEquals(functionRuntimeManager.getRuntimeFactory().getClass(), ThreadRuntimeFactory.class);
-            ThreadRuntimeFactory threadRuntimeFactory =
-                    (ThreadRuntimeFactory) functionRuntimeManager.getRuntimeFactory();
+            ThreadRuntimeFactory threadRuntimeFactory = (ThreadRuntimeFactory) functionRuntimeManager.getRuntimeFactory();
             assertEquals(threadRuntimeFactory.getThreadGroup().getName(), "threadGroupName");
         }
     }
@@ -1076,7 +1041,7 @@ public class FunctionRuntimeManagerTest {
         workerConfig.setWorkerId("worker-1");
         workerConfig.setFunctionRuntimeFactoryClassName(ThreadRuntimeFactory.class.getName());
         workerConfig.setFunctionRuntimeFactoryConfigs(
-                ObjectMapperFactory.getMapper().getObjectMapper().convertValue(
+                ObjectMapperFactory.getThreadLocal().convertValue(
                         new ThreadRuntimeFactoryConfig().setThreadGroupName("test"), Map.class));
         workerConfig.setPulsarServiceUrl(PULSAR_SERVICE_URL);
         workerConfig.setStateStorageServiceUrl("foo");
@@ -1091,13 +1056,11 @@ public class FunctionRuntimeManagerTest {
         Sinks sinks = mock(Sinks.class);
         doReturn(sinks).when(pulsarAdmin).sinks();
         Functions functions = mock(Functions.class);
-        doNothing().when(functions)
-                .restartFunction(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.any());
+        doNothing().when(functions).restartFunction(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.any());
         doReturn(functions).when(pulsarAdmin).functions();
 
         doReturn(pulsarAdmin).when(workerService).getFunctionAdmin();
-        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                .mockStatic(RuntimeFactory.class);) {
+        try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
 
             mockRuntimeFactory(runtimeFactoryMockedStatic);
 
@@ -1122,7 +1085,6 @@ public class FunctionRuntimeManagerTest {
                             .setTenant("test-tenant").setNamespace("test-namespace").setName("sink")
                             .setComponentType(Function.FunctionDetails.ComponentType.SINK)).build();
 
-            @Cleanup
             FunctionRuntimeManager functionRuntimeManager = spy(new FunctionRuntimeManager(
                     workerConfig,
                     workerService,
@@ -1175,19 +1137,16 @@ public class FunctionRuntimeManagerTest {
             // mock pulsarAdmin sources sinks functions
             PulsarAdmin pulsarAdmin = mock(PulsarAdmin.class);
             Sources sources = mock(Sources.class);
-            doNothing().when(sources)
-                    .restartSource(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.any());
+            doNothing().when(sources).restartSource(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.any());
             doReturn(sources).when(pulsarAdmin).sources();
             Sinks sinks = mock(Sinks.class);
             doReturn(sinks).when(pulsarAdmin).sinks();
             Functions functions = mock(Functions.class);
-            doNothing().when(functions)
-                    .restartFunction(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.any());
+            doNothing().when(functions).restartFunction(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.any());
             doReturn(functions).when(pulsarAdmin).functions();
 
             doReturn(pulsarAdmin).when(workerService).getFunctionAdmin();
-            try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito
-                    .mockStatic(RuntimeFactory.class);) {
+            try (final MockedStatic<RuntimeFactory> runtimeFactoryMockedStatic = Mockito.mockStatic(RuntimeFactory.class);) {
 
                 mockRuntimeFactory(runtimeFactoryMockedStatic);
 
@@ -1212,7 +1171,6 @@ public class FunctionRuntimeManagerTest {
                                 .setTenant("test-tenant").setNamespace("test-namespace").setName("sink")
                                 .setComponentType(Function.FunctionDetails.ComponentType.SINK)).build();
 
-                @Cleanup
                 FunctionRuntimeManager functionRuntimeManager = spy(new FunctionRuntimeManager(
                         workerConfig,
                         workerService,
@@ -1242,7 +1200,7 @@ public class FunctionRuntimeManagerTest {
                 .setInstance(Function.Instance.newBuilder()
                         .setFunctionMetaData(function).setInstanceId(0).build())
                 .build();
-        doReturn(List.of(assignment)).when(functionRuntimeManager)
+        doReturn(ImmutableList.of(assignment)).when(functionRuntimeManager)
                 .findFunctionAssignments("test-tenant", "test-namespace", "function");
         functionRuntimeManager.restartFunctionInstances("test-tenant", "test-namespace", "function");
         if (expectRestartByPulsarAdmin) {
