@@ -1,4 +1,4 @@
-/*
+/**
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,8 +18,9 @@
  */
 package org.apache.pulsar.io.docs;
 
+import com.beust.jcommander.JCommander;
+import com.beust.jcommander.Parameter;
 import com.google.common.base.Strings;
-import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
@@ -27,34 +28,40 @@ import java.io.PrintWriter;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.net.URL;
+import java.net.URLClassLoader;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.Callable;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.pulsar.io.core.annotations.Connector;
 import org.apache.pulsar.io.core.annotations.FieldDoc;
 import org.reflections.Reflections;
 import org.reflections.util.ConfigurationBuilder;
-import picocli.CommandLine;
-import picocli.CommandLine.Command;
-import picocli.CommandLine.Option;
 
 @Slf4j
-@Command(name = "connector-doc-gen")
-public class ConnectorDocGenerator implements Callable<Integer> {
+public class ConnectorDocGenerator {
 
     private static final String INDENT = "  ";
 
     private static Reflections newReflections() throws Exception {
-        final String[] classpathList = System.getProperty("java.class.path").split(":");
-        final List<URL> urlList = new ArrayList<>();
-        for (String file : classpathList) {
-            urlList.add(new File(file).toURI().toURL());
+        List<URL> urls = new ArrayList<>();
+        ClassLoader[] classLoaders = new ClassLoader[] {
+            ConnectorDocGenerator.class.getClassLoader(),
+            Thread.currentThread().getContextClassLoader()
+        };
+        for (int i = 0; i < classLoaders.length; i++) {
+            if (classLoaders[i] instanceof URLClassLoader) {
+                urls.addAll(Arrays.asList(((URLClassLoader) classLoaders[i]).getURLs()));
+            } else {
+                throw new RuntimeException("ClassLoader '" + classLoaders[i] + " is not an instance of URLClassLoader");
+            }
         }
-        return new Reflections(new ConfigurationBuilder().setUrls(urlList));
+        ConfigurationBuilder confBuilder = new ConfigurationBuilder();
+        confBuilder.setUrls(urls);
+        return new Reflections(confBuilder);
     }
 
     private final Reflections reflections;
@@ -63,7 +70,7 @@ public class ConnectorDocGenerator implements Callable<Integer> {
         this.reflections = newReflections();
     }
 
-    private void generateConnectorYamlFile(Class<?> configClass, PrintWriter writer) {
+    private void generateConnectorYaml(Class configClass, PrintWriter writer) {
         log.info("Processing connector config class : {}", configClass);
 
         writer.println("configs:");
@@ -75,9 +82,7 @@ public class ConnectorDocGenerator implements Callable<Integer> {
             }
             FieldDoc fieldDoc = field.getDeclaredAnnotation(FieldDoc.class);
             if (null == fieldDoc) {
-                final String message = "Missing FieldDoc for field '%s' in class '%s'."
-                        .formatted(field.getName(), configClass.getCanonicalName());
-                throw new RuntimeException(message);
+                throw new RuntimeException("Missing `FieldDoc` for field '" + field.getName() + "'");
             }
             writer.println(INDENT + "# " + fieldDoc.help());
             String fieldPrefix = "";
@@ -94,52 +99,77 @@ public class ConnectorDocGenerator implements Callable<Integer> {
         writer.flush();
     }
 
-    private void generateConnectorYamlFile(Class<?> connectorClass, Connector connectorDef, PrintWriter writer) {
+    private void generateConnectorYaml(Class connectorClass, Connector connectorDef, PrintWriter writer) {
         log.info("Processing connector definition : {}", connectorDef);
         writer.println("# " + connectorDef.type() + " connector : " + connectorClass.getName());
         writer.println();
         writer.println("# " + connectorDef.help());
         writer.println();
-        generateConnectorYamlFile(connectorDef.configClass(), writer);
+        generateConnectorYaml(connectorDef.configClass(), writer);
     }
 
-    private void generatorConnectorYamlFiles(String outputDir) throws IOException {
+    private void generatorConnectorYamls(String outputDir) throws IOException  {
         Set<Class<?>> connectorClasses = reflections.getTypesAnnotatedWith(Connector.class);
         log.info("Retrieve all `Connector` annotated classes : {}", connectorClasses);
 
         for (Class<?> connectorClass : connectorClasses) {
-            final Connector connectorDef = connectorClass.getDeclaredAnnotation(Connector.class);
-            final String name = connectorDef.name().toLowerCase();
-            final String type = connectorDef.type().name().toLowerCase();
-            final String filename = "pulsar-io-%s-%s.yml".formatted(name, type);
-            final Path outputPath = Path.of(outputDir, filename);
-            try (FileOutputStream fos = new FileOutputStream(outputPath.toFile())) {
+            Connector connectorDef = connectorClass.getDeclaredAnnotation(Connector.class);
+            try (FileOutputStream fos = new FileOutputStream(
+                    Paths.get(
+                    outputDir,
+                    "pulsar-io-" + connectorDef.name()
+                        + "-" + connectorDef.type().name().toLowerCase()).toString() + ".yml")) {
                 PrintWriter pw = new PrintWriter(new OutputStreamWriter(fos, StandardCharsets.UTF_8));
-                generateConnectorYamlFile(connectorClass, connectorDef, pw);
+                generateConnectorYaml(connectorClass, connectorDef, pw);
                 pw.flush();
             }
         }
     }
 
-    @Option(
-            names = {"-o", "--output-dir"},
+    /**
+     * Args for stats generator.
+     */
+    private static class MainArgs {
+
+        @Parameter(
+            names = {
+                "-o", "--output-dir"
+            },
             description = "The output dir to dump connector docs",
-            required = true)
-    String outputDir = null;
+            required = true
+        )
+        String outputDir = null;
 
-    @Option(names = {"-h", "--help"}, usageHelp = true, description = "Show this help message")
-    boolean help = false;
+        @Parameter(
+            names = {
+                "-h", "--help"
+            },
+            description = "Show this help message")
+        boolean help = false;
 
-    @Override
-    public Integer call() throws Exception {
-        ConnectorDocGenerator docGen = new ConnectorDocGenerator();
-        docGen.generatorConnectorYamlFiles(outputDir);
-        return 0;
     }
 
     public static void main(String[] args) throws Exception {
-        CommandLine commander = new CommandLine(new ConnectorDocGenerator());
-        Runtime.getRuntime().exit(commander.execute(args));
+        MainArgs mainArgs = new MainArgs();
+
+        JCommander commander = new JCommander();
+        try {
+            commander.setProgramName("connector-doc-gen");
+            commander.addObject(mainArgs);
+            commander.parse(args);
+            if (mainArgs.help) {
+                commander.usage();
+                Runtime.getRuntime().exit(0);
+                return;
+            }
+        } catch (Exception e) {
+            commander.usage();
+            Runtime.getRuntime().exit(-1);
+            return;
+        }
+
+        ConnectorDocGenerator docGen = new ConnectorDocGenerator();
+        docGen.generatorConnectorYamls(mainArgs.outputDir);
     }
 
 }
